update admin 3.4.0 consistency/add

--- a/j3x/admin_id-ID/id-ID.com_content.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_content.sys.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_content.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_content.sys.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -28,6 +28,8 @@ COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Daftar Kategori"
 COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Tampilkan semua artikel-artikel pilihan dari satu atau banyak kategori di dalam satu atau multi-kolom."
 COM_CONTENT_CATEGORY_VIEW_FEATURED_OPTION="Standar"
 COM_CONTENT_CATEGORY_VIEW_FEATURED_TITLE="Kategori Artikel Pilihan Tunggal"
+COM_CONTENT_CONTENT_TYPE_ARTICLE="Artikel"
+COM_CONTENT_CONTENT_TYPE_CATEGORY="Kategori Artikel"
 COM_CONTENT_FEATURED="Pilihan"
 COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Tampilan pendahuluan artikel di dalam satu atau multi-kolom untuk artikel pilihan dari semua kategori. "
 COM_CONTENT_FEATURED_VIEW_DEFAULT_OPTION="Standar"
