--- a/j3x/admin_id-ID/id-ID.com_cpanel.ini
+++ b/j3x/admin_id-ID/id-ID.com_cpanel.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_cpanel.ini 889 2014-02-24 01:30:44Z dw1rianto $
+; $Id: id-ID.com_cpanel.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -8,7 +8,7 @@ COM_CPANEL="Panel Kendali"
 COM_CPANEL_HEADER_SUBMENU="Submenu"
 COM_CPANEL_HEADER_SYSTEM="Sistem"
 COM_CPANEL_LINK_CHECKIN="Pemeriksaan Global"
-COM_CPANEL_LINK_CLEAR_CACHE="Hapus Cache"
+COM_CPANEL_LINK_CLEAR_CACHE="Hapus Tembolok"
 COM_CPANEL_LINK_DASHBOARD="Dasbor"
 COM_CPANEL_LINK_EXTENSIONS="Pasang Ekstensi"
 COM_CPANEL_LINK_GLOBAL_CONFIG="Konfigurasi Global"
@@ -17,11 +17,16 @@ COM_CPANEL_MESSAGES_BODY_NOCLOSE="Ada pesan penting paska-pemasangan yang perlu 
 COM_CPANEL_MESSAGES_BODYMORE_NOCLOSE="Anda dapat memeriksa pesan ini kapan saja dengan mengklik menu Komponen, lalu pilih Pesan Paska-Pemasangan pada menu di halaman administrator Anda. Informasi ini tidak akan muncul lagi ketika Anda telah menyembunyikan semua pesan."
 COM_CPANEL_MESSAGES_REVIEW="Periksa Pesan"
 COM_CPANEL_MESSAGES_TITLE="Anda mempunyai Pesan Paska-Pemasangan"
-COM_CPANEL_MSG_EACCELERATOR_BODY="eAccelerator tidak cocok dengan Joomla! Dengan mengklik tombol Ubah ke File Caching dibawah ini kita akan mengubah pengendali cache ke berbasis-file. Jika Anda ingin menggunakan handler cache yang berbeda silahkan ubah pada dalam halaman Konfigurasi Global."
-COM_CPANEL_MSG_EACCELERATOR_BUTTON="Ubah ke File"
-COM_CPANEL_MSG_EACCELERATOR_TITLE="eAccelerator tidak kompatibel dengan Joomla!"
+COM_CPANEL_MSG_EACCELERATOR_BODY="eAccelerator tidak cocok dengan Joomla! Dengan mengklik tombol Ganti ke Berkas Caching dibawah ini kita akan mengubah pengendali tembolok ke berbasis-file. Jika Anda ingin menggunakan pemegang tembolok yang berbeda silahkan ubah pada dalam halaman Konfigurasi Global."
+COM_CPANEL_MSG_EACCELERATOR_BUTTON="Ganti ke Berkas"
+COM_CPANEL_MSG_EACCELERATOR_TITLE="eAccelerator tidak sesuai dengan Joomla!"
+COM_CPANEL_MSG_HTACCESS_BODY="Sebuah perubahan ke berkas standar .htaccess dan web.config telah dilakukan di Joomla! 3.4 untuk mencegah pendataan direktori secara standar. Para pengguna disarankan untuk melakukan perubahan ini pada berkas-berkas yang mereka punya. Lihat <a href="_QQ_"https://docs.joomla.org/Preconfigured_htaccess"_QQ_">halaman ini</a> untuk informasi selengkapnya."
+COM_CPANEL_MSG_HTACCESS_BUTTON="Benarkan"
+COM_CPANEL_MSG_HTACCESS_TITLE="Mutakhir .htaccess & web.config"
+COM_CPANEL_MSG_ROBOTS_TITLE="Mutakhir robots.txt"
 COM_CPANEL_MSG_PHPVERSION_BODY="Dimulai dengan Joomla 3.3 versi PHP yang digunakan pada situs ini tidak akan lagi didukung. Joomla! 3.3 akan membutuhkan setidaknya <a href="_QQ_"http://community.joomla.org/blogs/leadership/1798-raising-the-bar-on-security.html"_QQ_" target="_QQ_"_blank"_QQ_">PHP versi 5.3.10 dalam rangka memberikan fitur keamanan yang lebih baik untuk para penggunanya</a>."
 COM_CPANEL_MSG_PHPVERSION_TITLE="Versi PHP Anda tidak akan didukung pada Joomla! 3.3"
-COM_CPANEL_WELCOME_BEGINNERS_MESSAGE="<p>Sumber daya komunitas yang tersedia untuk pengguna baru</p><ul><li><a href="_QQ_"http://docs.joomla.org/Portal:Beginners"_QQ_"> Joomla! Panduan Pemula</a></li><li><a href="_QQ_"http://forum.joomla.org/viewforum.php?f=706"_QQ_">Forum Joomla!</a></li><ul>"
+COM_CPANEL_MSG_ROBOTS_BODY="Sebuah perubahan ke berkas standar robots.txt telah dilakukan di Joomla! 3.3 untuk mengizinkan Google mengakses berkas-berkas templat dan media secara standar guna meningkatkan SEO. Perubahan ini tidak diterapkan secara otomatis pada saat upgrade dan pengguna disarankan untuk mengulas setiap perubahan yang ada di dalam berkas robots.txt.dist dan lakukan perubahan-perubahan ini pada berkas robots.txt yang mereka punya."
+COM_CPANEL_WELCOME_BEGINNERS_MESSAGE="<p>Sumber daya komunitas yang tersedia untuk pengguna baru</p><ul><li><a href="_QQ_"https://docs.joomla.org/Portal:Beginners"_QQ_">Joomla! Panduan Pemula</a></li><li><a href="_QQ_"http://forum.joomla.org/viewforum.php?f=706"_QQ_">Forum Joomla!</a></li><ul>"
 COM_CPANEL_WELCOME_BEGINNERS_TITLE="Selamat datang di Joomla!"
 COM_CPANEL_XML_DESCRIPTION="Komponen Panel Kendali"
