--- a/j3x/admin_id-ID/id-ID.com_finder.ini
+++ b/j3x/admin_id-ID/id-ID.com_finder.ini
@@ -1,30 +1,30 @@
-; $Id: id-ID.com_finder.ini 901 2014-04-25 00:12:56Z dw1rianto $
+; $Id: id-ID.com_finder.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_FINDER="Pencarian Pintar"
-COM_FINDER_ALLOW_EMPTY_QUERY_DESC="Hanya jika sebuah penyaring dipilih, izinkan cari string kosong untuk mengawali pencarian dengan batas-batas penyaringan yang ada."
+COM_FINDER_ALLOW_EMPTY_QUERY_DESC="Hanya jika sebuah penyaring dipilih, izinkan cari kata/kalimat kosong untuk mengawali pencarian dengan batas-batas penyaringan yang ada."
 COM_FINDER_ALLOW_EMPTY_QUERY_LABEL="Izinkan Cari Kosong"
 COM_FINDER_AN_ERROR_HAS_OCCURRED="Terjadi sebuah Kesalahan"
-COM_FINDER_CONFIG_ALLOW_EMPTY_QUERY_DESCRIPTION="Hanya apabila penyaringan sudah dipilih sebelumnya, izinkan string kosong pencarian untuk memulai sebuah pencarian dengan kendala-kendala penyaringannya."
+COM_FINDER_CONFIG_ALLOW_EMPTY_QUERY_DESCRIPTION="Hanya apabila penyaringan sudah dipilih sebelumnya, izinkan kata/kalimat kosong pencarian untuk memulai sebuah pencarian dengan kendala-kendala penyaringannya."
 COM_FINDER_CONFIG_ALLOW_EMPTY_QUERY_LABEL="Izinkan Pencarian Kosong"
 COM_FINDER_CONFIG_BATCH_SIZE_DESCRIPTION="Kendali ukuran seberapa banyak butir yang akan diproses sekaligus. Ukuran yang besar menghabiskan banyak memori sementara ukuran yang lebih kecil sebaliknya tapi mengeksekusi lebih banyak permintaan akan memakan waktu yang lebih lama, tentunya."
 COM_FINDER_CONFIG_BATCH_SIZE_LABEL="Besar Pengindeks"
 COM_FINDER_CONFIG_DESCRIPTION_LENGTH_DESC="Teks keterangan untuk hasil pencarian akan dipersingkat sesuai panjang karakter tertentu."
 COM_FINDER_CONFIG_DESCRIPTION_LENGTH_DESCRIPTION="Teks keterangan untuk hasil pencarian akan dipersingkat sesuai panjang karakter tertentu."
 COM_FINDER_CONFIG_DESCRIPTION_LENGTH_LABEL="Panjangnya Deskripsi"
-COM_FINDER_CONFIG_ENABLE_LOGGING_DESCRIPTION="Aktifkan opsi ini untuk membuat berkas pencatatan di dalam folder log situs Anda selama proses pengindeksan. Berkas ini sangat berguna nantinya apabila ada permasalahan mengenai proses indeks. Pencatatan direkomendasikan untuk tidak diaktifkan kecuali bila diperlukan."
+COM_FINDER_CONFIG_ENABLE_LOGGING_DESCRIPTION="Aktifkan opsi ini untuk membuat berkas pencatatan di dalam pelipat catatan situs Anda selama proses pengindeksan. Berkas ini sangat berguna nantinya apabila ada permasalahan mengenai proses indeks. Pencatatan direkomendasikan untuk tidak diaktifkan kecuali bila diperlukan."
 COM_FINDER_CONFIG_ENABLE_LOGGING_LABEL="Aktifkan Pencatatan"
 COM_FINDER_CONFIG_EXPAND_ADVANCED_DESC="Beralih apakah opsi pencarian lanjutan diperluas secara standar."
 COM_FINDER_CONFIG_EXPAND_ADVANCED_DESCRIPTION="Beralih apakah opsi pencarian lanjutan diperluas secara standar."
-COM_FINDER_CONFIG_EXPAND_ADVANCED_LABEL="Perluas Pencarian Lanjutan"
+COM_FINDER_CONFIG_EXPAND_ADVANCED_LABEL="Perluas Pencarian Tingkat Lanjut"
 COM_FINDER_CONFIG_FIELD_OPENSEARCH_DESCRIPTON_DESCRIPTION="Keterangan yang ditampilkan sebagai penyedia pencarian untuk situs ini."
 COM_FINDER_CONFIG_FIELD_OPENSEARCH_DESCRIPTON_LABEL="Deskripsi OpenSearch"
 COM_FINDER_CONFIG_FIELD_OPENSEARCH_NAME_DESCRIPTION="Nama yang ditampilkan sebagai penyedia pencarian untuk situs ini."
 COM_FINDER_CONFIG_FIELD_OPENSEARCH_NAME_LABEL="Nama OpenSearch"
-COM_FINDER_CONFIG_GATHER_SEARCH_STATISTICS_DESCRIPTION="Merekam frasa pencarian yang dimasukkan pengunjung."
+COM_FINDER_CONFIG_GATHER_SEARCH_STATISTICS_DESCRIPTION="Merekam frase pencarian yang dimasukkan pengunjung."
 COM_FINDER_CONFIG_GATHER_SEARCH_STATISTICS_LABEL="Kumpulkan Statistik Pencarian"
 COM_FINDER_CONFIG_HILIGHT_CONTENT_SEARCH_TERMS_DESCRIPTION="Beralih apakah syarat-syarat pencarian harus disorot di dalam hasil pencarian."
 COM_FINDER_CONFIG_HILIGHT_CONTENT_SEARCH_TERMS_LABEL="Sorot Syarat Pencarian"
@@ -44,9 +44,9 @@ COM_FINDER_CONFIG_PATH_MULTIPLIER_DESCRIPTION="Pengganda digunakan untuk mengend
 COM_FINDER_CONFIG_PATH_MULTIPLIER_LABEL="Pengganda Jalur Teks"
 COM_FINDER_CONFIG_SHOW_ADVANCED_DESC="Beralih apakah pengguna harus dapat melihat opsi pencarian lanjutan."
 COM_FINDER_CONFIG_SHOW_ADVANCED_DESCRIPTION="Beralih apakah pengguna dapat melihat opsi pencarian lanjutan."
-COM_FINDER_CONFIG_SHOW_ADVANCED_LABEL="Pencarian Lanjutan"
-COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_DESCRIPTION="Tentukan apakah pengguna bisa melihat tip opsi pencarian lanjutan."
-COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_LABEL="Tips Lanjutan"
+COM_FINDER_CONFIG_SHOW_ADVANCED_LABEL="Pencarian Tingkat Lanjut"
+COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_DESCRIPTION="Tentukan apakah pengguna bisa melihat saran-saran opsi pencarian lanjutan."
+COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_LABEL="Tips Tingkat Lanjut"
 COM_FINDER_CONFIG_SHOW_AUTOSUGGEST_DESCRIPTION="Beralih apakah saran pencarian otomatis harus ditampilkan."
 COM_FINDER_CONFIG_SHOW_AUTOSUGGEST_LABEL="Saran Pencarian"
 COM_FINDER_CONFIG_SHOW_DATE_FILTERS_DESC="Tampilkan tanggal saring mulai dan akhir di cari pencarian lanjutan."
@@ -56,7 +56,7 @@ COM_FINDER_CONFIG_SHOW_DESCRIPTION_DESC="Beralih apakah keterangan harus ditampi
 COM_FINDER_CONFIG_SHOW_DESCRIPTION_DESCRIPTION="Beralih apakah keterangan harus ditampilkan bersama hasil-hasil pencarian."
 COM_FINDER_CONFIG_SHOW_DESCRIPTION_LABEL="Dekripsi Hasil"
 COM_FINDER_CONFIG_SHOW_EXPLAINED_QUERY_DESC="Apakah akan menampilkan penjelasan detail dari permintaan pencarian."
-COM_FINDER_CONFIG_SHOW_EXPLAINED_QUERY_LABEL="Penjelasan Query"
+COM_FINDER_CONFIG_SHOW_EXPLAINED_QUERY_LABEL="Penjelasan Kueri"
 COM_FINDER_CONFIG_SHOW_FEED_DESC="Tampilkan tautan pengumpan sindikasi"
 COM_FINDER_CONFIG_SHOW_FEED_LABEL="Tampilkan Pengumpan"
 COM_FINDER_CONFIG_SHOW_FEED_TEXT_DESC="Tampilkan teks yang berhubungan dengan pengumpan, selain itu hanya judul saja yang tampil di dalam pengumpan."
@@ -132,7 +132,7 @@ COM_FINDER_INDEX_CONFIRM_PURGE_PROMPT="Anda yakin ingin menghapus SEMUA butir da
 COM_FINDER_INDEX_DATE_INFO="Informasi Tanggal Tautan::Mulai Penerbitan: %s<br />Akhir Penerbitan: %s<br />Awal Konten: %s<br />Akhir Konten: %s"
 COM_FINDER_INDEX_FILTER_BY_STATE="Sembarang Bagian yang Diterbitkan"
 COM_FINDER_INDEX_HEADING_INDEX_DATE="Terakhir Dimutakhirkan"
-COM_FINDER_INDEX_HEADING_INDEX_TYPE="Tipe"
+COM_FINDER_INDEX_HEADING_INDEX_TYPE="Jenis"
 COM_FINDER_INDEX_HEADING_LINK_URL="URL Sembarang"
 COM_FINDER_INDEX_NO_CONTENT="Tidak ada konten yang sesuai dengan kriteria pencarian Anda."
 COM_FINDER_INDEX_NO_DATA="Tidak ada konten yang diindeks."
@@ -141,15 +141,15 @@ COM_FINDER_INDEX_PURGE_SUCCESS="Semua butir berhasil dibersihkan."
 COM_FINDER_INDEX_TIP="Mulai pengindeks dengan menekan tombol Indeks yang ada di toolbar."
 COM_FINDER_INDEX_TOOLBAR_PURGE="Bersihkan"
 COM_FINDER_INDEX_TOOLBAR_TITLE="Pencarian Pintar: Kelola Konten Terindeks"
-COM_FINDER_INDEX_TYPE_FILTER="Sembarang Tipe Konten"
+COM_FINDER_INDEX_TYPE_FILTER="Sembarang Jenis Konten"
 COM_FINDER_INDEXER_HEADER_COMPLETE="Indeks telah Selesai"
 COM_FINDER_INDEXER_HEADER_ERROR="Sebuah Kesalahan Telah Terjadi"
 COM_FINDER_INDEXER_HEADER_INIT="Memulai Pengindeks"
 COM_FINDER_INDEXER_HEADER_OPTIMIZE="Mengoptimalkan Indeks"
 COM_FINDER_INDEXER_HEADER_RUNNING="Pengindeks Sedang Bekerja"
 COM_FINDER_INDEXER_INVALID_DRIVER="Pengindeks tidak mendukung pemrosesan driver database %s."
-COM_FINDER_INDEXER_INVALID_PARSER="Tipe parser yang salah %s"
-COM_FINDER_INDEXER_INVALID_STEMMER="Tipe stemmer yang salah %s"
+COM_FINDER_INDEXER_INVALID_PARSER="Jenis parser yang salah %s"
+COM_FINDER_INDEXER_INVALID_STEMMER="Jenis stemmer yang salah %s"
 COM_FINDER_INDEXER_MESSAGE_COMPLETE="Proses indeks telah selesai. Sekarang Anda boleh menutup jendela ini."
 COM_FINDER_INDEXER_MESSAGE_INIT="Pengindeks sedang mengenali. Jangan tutup jendela ini."
 COM_FINDER_INDEXER_MESSAGE_OPTIMIZE="Table indeks sedang dioptimalkan untuk performa terbaik. Jangan tutup jendela ini."
@@ -167,7 +167,7 @@ COM_FINDER_MAPS_CONFIRM_DELETE_PROMPT="Anda yakin ingin menghapus peta yang dipi
 COM_FINDER_MAPS_MULTILANG="Catatan: Sistem plugin saring bahasa sudah tidak diaktifkan, maka cabang ini tidak akan digunakan."
 COM_FINDER_MAPS_NO_CONTENT="Tidak ada hasil untuk ditampilkan. Bisa jadi karena tidak ada konten yang berhasil diindeks atau tidak ada konten yang sesuai dengan kriteria penyaringan Anda."
 COM_FINDER_MAPS_RETURN_TO_BRANCHES="Kembali ke Cabang"
-COM_FINDER_MAPS_TOOLBAR_TITLE="Pencarian Pintar:  Kelola Peta Konten"
+COM_FINDER_MAPS_TOOLBAR_TITLE="Pencarian Pintar: Kelola Peta Konten"
 COM_FINDER_MESSAGE_RETURNED="Pesan berikut dikembalikan oleh server:"
 COM_FINDER_N_ITEMS_CHECKED_IN_0="Tidak ada butir yang berhasil diperiksa"
 COM_FINDER_N_ITEMS_CHECKED_IN_1="%d butir berhasil diperiksa"
@@ -191,11 +191,11 @@ COM_FINDER_SEARCH_FILTER_SEARCH_DESC="Memilih Saring Cari akan membatasi sembara
 COM_FINDER_SEARCH_FILTER_SEARCH_LABEL="Saring Cari"
 COM_FINDER_SEARCH_LABEL="%s Pencarian:"
 COM_FINDER_SEARCH_SEARCH_QUERY_DESC="Memasukkan syarat pencarian akan mengembalikan butir menu ini secara otomatis ke hasil pencarian untuk syarat-syarat yang telah ditetapkan."
-COM_FINDER_SEARCH_SEARCH_QUERY_LABEL="Query Cari"
+COM_FINDER_SEARCH_SEARCH_QUERY_LABEL="Kueri Cari"
 COM_FINDER_SELECT_SEARCH_FILTER="Pilih saring"
 COM_FINDER_STATISTICS="Statistik"
 COM_FINDER_STATISTICS_LINK_TYPE_COUNT="Jumlah"
-COM_FINDER_STATISTICS_LINK_TYPE_HEADING="Tipe Tautan"
+COM_FINDER_STATISTICS_LINK_TYPE_HEADING="Jenis Tautan"
 COM_FINDER_STATISTICS_LINK_TYPE_TOTAL="Total"
 COM_FINDER_STATISTICS_STATS_DESCRIPTION="Konten indeks situs termasuk syarat-syarat %s diseluruh tautan %s dengan atribut %s di dalam cabang %s"
 COM_FINDER_STATISTICS_TITLE="Statistik Pencarian Pintar"
