--- a/j3x/admin_id-ID/id-ID.com_joomlaupdate.ini
+++ b/j3x/admin_id-ID/id-ID.com_joomlaupdate.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_joomlaupdate.ini 881 2014-02-23 14:34:34Z sikumbang $
+; $Id: id-ID.com_joomlaupdate.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
@@ -10,17 +10,16 @@ COM_JOOMLAUPDATE_CONFIG_SOURCES_DESC="Konfigurasikan dari mana Joomla! mengambil
 COM_JOOMLAUPDATE_CONFIG_SOURCES_LABEL="Sumber Pemutakhiran"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_CUSTOM="URL Kustom"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_CUSTOM_ERROR="Kolom tautan kustom kosong."
-COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_DESC="Server pemutakhiran Joomla! biasanya akan mencari tahu bilamana telah tersedia"
-COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LABEL="Server pemutakhiran"
-COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LTS="Dukungan Jangka Panjang (direkomendasikan)"
-COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_NOCHANGE="Yang Dikonfigurasikan saat ini (tida ada perubahan)"
-COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_STS="Dukungan Jangka Pendek"
+COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_DEFAULT="Standar"
+COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_DESC="Kanal pemutakhiran Joomla! biasanya akan mencari tahu bilamana telah tersedia"
+COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LABEL="Kanal Pemutakhiran"
+COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_NEXT="Joomla! Berikutnya"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_TESTING="Percobaan"
 COM_JOOMLAUPDATE_CONFIGURATION="Konfigurasi Pemutakhiran Joomla!"
 COM_JOOMLAUPDATE_OVERVIEW="Pemutakhiran Joomla!"
 COM_JOOMLAUPDATE_UPDATE_LOG_CLEANUP="Bersihkan setelah pemasangan."
 COM_JOOMLAUPDATE_UPDATE_LOG_COMPLETE="Pemutakhiran ke versi %s selesai."
-COM_JOOMLAUPDATE_UPDATE_LOG_DELETE_FILES="Hapus berkas dan folder yang dibuang."
+COM_JOOMLAUPDATE_UPDATE_LOG_DELETE_FILES="Hapus berkas dan pelipat yang dibuang."
 COM_JOOMLAUPDATE_UPDATE_LOG_FILE="Berkas %s telah selesai diunduh."
 COM_JOOMLAUPDATE_UPDATE_LOG_FINALISE="Finalisasi Pemasangan."
 COM_JOOMLAUPDATE_UPDATE_LOG_START="Pemutakhiran dimulai oleh pengguna %2$s (%1$s). Versi lama adalah %3$s."
@@ -34,6 +33,7 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_HOSTNAME="Host FTP"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_PASSWORD="Sandi FTP"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_PORT="Port FTP"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_USERNAME="Nama Pengguna FTP"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_INFOURL="Informasi Tambahan"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLED="Versi Joomla! yang Terpasang"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLUPDATE="Pasang pemutakhiran"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_LATEST="Versi Joomla! terakhir"
@@ -45,10 +45,14 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_NOUPDATESNOTICE="Anda sudah di versi Joomla! yang 
 COM_JOOMLAUPDATE_VIEW_DEFAULT_PACKAGE="URL paket pemutakhiran"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATEFOUND="Sebuah pemutakhiran Joomla! ditemukan"
 COM_JOOMLAUPDATE_VIEW_PROGRESS="Progres pemutakhiran"
-COM_JOOMLAUPDATE_VIEW_UPDATE_BYTESEXTRACTED="Bytes yang diekstrak"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_CUSTOM="Anda berada di kanal mutakhir &quot;%s&quot; - Ini bukanlah kanal mutakhir Joomla! resmi."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_DEFAULT="Anda berada di kanal mutakhir &quot;%s&quot; - Melalui kanal ini Anda bisa mendapatkan pemberitahuan-pemberitahuan tentang seluruh pemutakhiran rilis terkini Joomla! (3.x)"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_NEXT="Anda berada di kanal mutakhir &quot;%s&quot; - Melalui kanal ini Anda bisa mendapatkan pemberitahuan-pemberitahuan tentang seluruh pemutakhiran rilis terkini Joomla! (3.x) dan Anda juga akan diberitahukan ketika ada rilis mayor (4.x) nantinya. Sebelum upgrade ke 4.x Anda perlu memeriksa kesesuaiannya dengan lingkungan Anda (Joomla! terpasang)."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_TESTING="Anda berada di kanal mutakhir &quot;%s&quot; - Kanal ini dibuat sebagai tempat uji bagi rilis-rilis baru dan perbaikan Joomla!.<br />Hanya diperuntukkan bagi anggota JBS (Joomla! Bug Squad) dan komunitas Joomla! yang mengadakan ujicoba. Jangan gunakan setelan ini di situs produksi."
+COM_JOOMLAUPDATE_VIEW_UPDATE_BYTESEXTRACTED="Bytes yang dipecah"
 COM_JOOMLAUPDATE_VIEW_UPDATE_BYTESREAD="Bytes yang dibaca"
 COM_JOOMLAUPDATE_VIEW_UPDATE_DOWNLOADFAILED="Mengunduh paket pemutakhiran telah gagal"
-COM_JOOMLAUPDATE_VIEW_UPDATE_FILESEXTRACTED="Berkas yang diekstrak"
+COM_JOOMLAUPDATE_VIEW_UPDATE_FILESEXTRACTED="Berkas yang dipecah"
 COM_JOOMLAUPDATE_VIEW_UPDATE_INPROGRESS="Sedang memutakhirkan berkas-berkas Joomla! Anda. Silahkan tunggu ..."
 COM_JOOMLAUPDATE_VIEW_UPDATE_PERCENT="Persentase yang telah selesai"
 COM_JOOMLAUPDATE_XML_DESCRIPTION="Memutakhirkan Joomla! ke versi paling baru dengan hanya sekali klik"
