--- a/j3x/admin_id-ID/id-ID.com_menus.ini
+++ b/j3x/admin_id-ID/id-ID.com_menus.ini
@@ -1,12 +1,12 @@
-; $Id: id-ID.com_menus.ini 903 2014-04-25 00:28:20Z dw1rianto $
+; $Id: id-ID.com_menus.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MENUS="Pengelolaan Menu"
-COM_MENUS_ADD_MENU_MODULE="Tambahkan modul untuk tipe menu ini."
-COM_MENUS_ADVANCED_FIELDSET_LABEL="Opsi Lanjutan"
+COM_MENUS_ADD_MENU_MODULE="Tambahkan modul untuk jenis menu ini."
+COM_MENUS_ADVANCED_FIELDSET_LABEL="Opsi Tingkat Lanjut"
 COM_MENUS_BASIC_FIELDSET_LABEL="Opsi Dasar"
 COM_MENUS_BATCH_MENU_ITEM_CANNOT_CREATE="Anda tidak diizinkan untuk membuat butir menu baru."
 COM_MENUS_BATCH_MENU_ITEM_CANNOT_EDIT="Anda tidak diizinkan mengedit butir menu."
@@ -14,17 +14,17 @@ COM_MENUS_BATCH_MENU_LABEL="Pilih Menu atau Induk untuk Pindah/Salin"
 COM_MENUS_BATCH_OPTIONS="Proses sekaligus kumpulan butir-butir menu yang dipilih"
 COM_MENUS_BATCH_TIP="Jika sebuah menu atau induk dipilih untuk dipindah/disalin, sembarang pilihan tindakan akan diterapkan ke menu yang dipilih. Selain itu, semua tindakan akan diterapkan ke menu yang dipilih."
 COM_MENUS_CONFIGURATION="Konfigurasi Menu"
-COM_MENUS_EDIT_MODULE_SETTINGS="Edit pengaturan modul"
+COM_MENUS_EDIT_MODULE_SETTINGS="Edit setelan modul"
 COM_MENUS_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah butir menu yang diatur ke Semua bahasa tidak dapat dihubungkan. Hubungan belum diatur."
 COM_MENUS_ERROR_ALREADY_HOME="Butir menu untuk beranda sudah diatur"
-COM_MENUS_ERROR_MENUTYPE="Silakan ganti tipe menu. Istilah 'menu' dan 'main' sudah dipakai untuk penggunaan halaman administrator"
+COM_MENUS_ERROR_MENUTYPE="Silahkan ganti jenis menu. Istilah 'menu' dan 'main' sudah dipakai untuk penggunaan halaman administrator"
 COM_MENUS_ERROR_ONE_HOME="Hanya satu butir menu yang dapat menjadi tautan beranda untuk masing-masing bahasa"
 COM_MENUS_EXTENSION_PUBLISHED_DISABLED="Komponen dinonaktifkan dan butir menu diterbitkan"
 COM_MENUS_EXTENSION_PUBLISHED_ENABLED="Komponen diaktifkan dan butir menu diterbitkan"
 COM_MENUS_EXTENSION_UNPUBLISHED_DISABLED="Komponen dinonaktifkan dan butir menu tidak diterbitkan"
 COM_MENUS_EXTENSION_UNPUBLISHED_ENABLED="Komponen diaktifkan dan butir menu tidak diterbitkan"
-COM_MENUS_FIELD_FEEDLINK_DESC="Tampilkan tautan feed untuk butir menu ini"
-COM_MENUS_FIELD_FEEDLINK_LABEL="Tautan Feed"
+COM_MENUS_FIELD_FEEDLINK_DESC="Tampilkan tautan pengumpan untuk butir menu ini"
+COM_MENUS_FIELD_FEEDLINK_LABEL="Tautan Pengumpan"
 COM_MENUS_FIELD_VALUE_IGNORE="Abaikan"
 COM_MENUS_FIELD_VALUE_NEW_WITH_NAV="Jendela Baru Dengan Navigasi"
 COM_MENUS_FIELD_VALUE_NEW_WITHOUT_NAV="Jendela Baru Tanpa Navigasi"
@@ -34,10 +34,12 @@ COM_MENUS_HEADING_ASSIGN_MODULE="Modul"
 COM_MENUS_HEADING_ASSOCIATION="Hubungan"
 COM_MENUS_HEADING_DISPLAY="Tampilan"
 COM_MENUS_HEADING_HOME="Beranda"
-COM_MENUS_HEADING_HOME_ASC="Beranda diurut dari awal"
-COM_MENUS_HEADING_HOME_DESC="Beranda diurut dari akhir"
+COM_MENUS_HEADING_HOME_ASC="Beranda urut naik"
+COM_MENUS_HEADING_HOME_DESC="Beranda urut turun"
+COM_MENUS_HEADING_LEVELS="Tampilan level"
 COM_MENUS_HEADING_LINKED_MODULES="Modul tertaut"
 COM_MENUS_HEADING_NUMBER_MENU_ITEMS="Jumlah Butir Menu"
+COM_MENUS_HEADING_POSITION="Posisi"
 COM_MENUS_HEADING_PUBLISHED_ITEMS="Diterbitkan"
 COM_MENUS_HEADING_TRASHED_ITEMS="Dibuang"
 COM_MENUS_HEADING_UNPUBLISHED_ITEMS="Tidak Diterbitkan"
@@ -60,7 +62,7 @@ COM_MENUS_ITEM_DETAILS="Detail"
 COM_MENUS_ITEM_FIELD_ALIAS_DESC="Alias digunakan di URL saat SEF dinyalakan"
 COM_MENUS_ITEM_FIELD_ALIAS_MENU_DESC="Butir Menu yang untuk ditautkan..."
 COM_MENUS_ITEM_FIELD_ALIAS_MENU_LABEL="Butir Menu"
-COM_MENUS_ITEM_FIELD_ANCHOR_CSS_DESC="Sebuah pilihan, gaya kustom yang diaplikasikan ke tautan menu."
+COM_MENUS_ITEM_FIELD_ANCHOR_CSS_DESC="Sebuah pilihan, gaya kustom yang diterapkan ke tautan menu."
 COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL="Gaya CSS Tautan"
 COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC="Sebuah pilihan, keterangan kustom untuk atribut judul tautan menu."
 COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Atribut Judul Tautan"
@@ -70,6 +72,8 @@ COM_MENUS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- Tidak ada hubungan -"
 COM_MENUS_ITEM_FIELD_BROWSERNAV_DESC="Jendela peramban target ketika butir menu diklik."
 COM_MENUS_ITEM_FIELD_BROWSERNAV_LABEL="Jendela Target"
 COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED="Sembunyikan Modul Yang Tidak Ditetapkan"
+COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_DESC="Tampilkan atau sembunyikan modul yang tidak ditetapkan ke butir menu ini"
+COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_LABEL="Modul Yang Tidak Ditetapkan"
 COM_MENUS_ITEM_FIELD_HOME_DESC="Atur butir menu ini sebagai standar atau menjadi halaman beranda situs. Anda harus mempunyai sebuah halaman standar yang diatur untuk selamanya."
 COM_MENUS_ITEM_FIELD_HOME_LABEL="Halaman Standar"
 COM_MENUS_ITEM_FIELD_LANGUAGE_DESC="Menentukan sebuah bahasa untuk butir menu ini"
@@ -95,14 +99,14 @@ COM_MENUS_ITEM_FIELD_PARENT_DESC="Pilihlah sebuah Butir Induk"
 COM_MENUS_ITEM_FIELD_PARENT_LABEL="Butir Induk"
 COM_MENUS_ITEM_FIELD_SECURE_DESC="Pilihlah apakah akan menggunakan SSL dan URL Keamanan Situs untuk tautan yang digunakan ini"
 COM_MENUS_ITEM_FIELD_SECURE_LABEL="Keamanan"
-COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_DESC="Menampilkan/Menyembunyikan Judul Peramban di dalam judul sebuah halaman. (Jika tidak ada teks pilihan yang dimasukkan - standar akan ke nilai yang berdasarkan pada Judul Butir Menu). Judul halaman biasanya ditampilkan di dalam tagar &quot;H1&quot;."
+COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_DESC="Tampilkan/Sembunyikan Judul Peramban di dalam judul sebuah halaman. (Jika tidak ada teks pilihan yang dimasukkan - standar akan ke nilai yang berdasarkan pada Judul Butir Menu). Judul halaman biasanya ditampilkan di dalam tagar &quot;H1&quot;."
 COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_LABEL="Tampilkan Judul"
 COM_MENUS_ITEM_FIELD_TEMPLATE_DESC="Pilih gaya templat tertentu untuk butir menu ini atau gunakan standar templat."
 COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Gaya Templat"
 COM_MENUS_ITEM_FIELD_TITLE_DESC="Judul butir menu yang akan tampil di dalam menu."
 COM_MENUS_ITEM_FIELD_TITLE_LABEL="Judul Menu"
-COM_MENUS_ITEM_FIELD_TYPE_DESC="Tipe tautan: Komponen, URL, Alias atau Pemisah"
-COM_MENUS_ITEM_FIELD_TYPE_LABEL="Tipe Butir Menu"
+COM_MENUS_ITEM_FIELD_TYPE_DESC="Jenis tautan: Komponen, URL, Alias atau Pemisah"
+COM_MENUS_ITEM_FIELD_TYPE_LABEL="Jenis Butir Menu"
 COM_MENUS_ITEM_IS_DEFAULT="Adalah standar"
 COM_MENUS_ITEM_MODULE_ASSIGNMENT="Tetapkan Modul untuk Butir Menu ini"
 COM_MENUS_ITEM_REQUIRED="Wajib"
@@ -115,20 +119,20 @@ COM_MENUS_ITEMS_SET_HOME_1="Satu butir menu berhasil diatur sebagai beranda"
 COM_MENUS_ITEMS_SET_HOME_MORE="%d butir menu berhasil diatur sebagai beranda"
 COM_MENUS_ITEMS_UNSET_HOME="Satu butir menu berhasil tidak diatur sebagai beranda"
 COM_MENUS_LAYOUT_FEATURED_OPTIONS="Opsi Tata Letak"
-COM_MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL="Opsi Tipe Menu"
-COM_MENUS_LINKTYPE_OPTIONS_LABEL="Opsi Tipe Tautan"
-COM_MENUS_MENU_CONFIRM_DELETE="Anda yakin ingin menhapus menu-menu ini? Mengkonfirmasi akan menghapus tipe menu yang dipilih, semua butir-butir menunya dan modul-modul menu yang terhubung dengannya."
+COM_MENUS_LAYOUT_MENUTYPE_OPTIONS_LABEL="Opsi Jenis Menu"
+COM_MENUS_LINKTYPE_OPTIONS_LABEL="Opsi Jenis Tautan"
+COM_MENUS_MENU_CONFIRM_DELETE="Anda yakin ingin menhapus menu-menu ini? Mengkonfirmasi akan menghapus jenis menu yang dipilih, semua butir-butir menunya dan modul-modul menu yang terhubung dengannya."
 COM_MENUS_MENU_DESCRIPTION_DESC="Keterangan tentang menu."
 COM_MENUS_MENU_DETAILS="Detail Menu"
 COM_MENUS_MENU_ITEM_SAVE_SUCCESS="Butir menu berhasil disimpan"
-COM_MENUS_MENU_SEARCH_FILTER="Cari dalam Judul atau tipe Menu"
+COM_MENUS_MENU_SEARCH_FILTER="Cari dalam Judul atau jenis Menu"
 COM_MENUS_MENU_MENUTYPE_DESC="Nama sistem menu."
-COM_MENUS_MENU_MENUTYPE_LABEL="Tipe menu"
+COM_MENUS_MENU_MENUTYPE_LABEL="Jenis menu"
 COM_MENUS_TYPE_SYSTEM="Tautan sistem"
 COM_MENUS_MENU_SAVE_SUCCESS="Menu berhasil disimpan"
 ;COM_MENUS_TYPE_SYSTEM="System Links"
 COM_MENUS_MENU_TITLE_DESC="Judul menu yang akan ditampilkan pada Menubar halaman Administrator dan daftar-daftar lain."
-COM_MENUS_MENU_TYPE_NOT_ALLOWED="Ini adalah tipe-menu yang dipesan."
+COM_MENUS_MENU_TYPE_NOT_ALLOWED="Ini adalah jenis-menu yang dipesan."
 COM_MENUS_PAGE_OPTIONS_LABEL="Opsi Tampilan Halaman"
 ; in the following string
 ; %1$s is for module title, %2$s is for access-title, %3$s is for position
@@ -151,7 +155,7 @@ COM_MENUS_N_MENUS_DELETED_1="Menu type berhasil dihapus"
 COM_MENUS_NO_ITEM_SELECTED="Tidak ada butir menu yang dipilih"
 COM_MENUS_NO_MENUS_SELECTED="Tidak ada menu yang dipilih"
 COM_MENUS_OPTION_SELECT_LEVEL="- Pilih Level Maks -"
-COM_MENUS_REQUEST_FIELDSET_LABEL="Pengaturan Wajib"
+COM_MENUS_REQUEST_FIELDSET_LABEL="Setelan Wajib"
 COM_MENUS_SAVE_SUCCESS="Butir menu berhasil disimpan"
 COM_MENUS_SUBMENU_ITEMS="Butir Menu"
 COM_MENUS_SUBMENU_MENUS="Menu"
@@ -163,7 +167,7 @@ COM_MENUS_TITLE_EDIT_ITEM="Pengelolaan Menu: Edit Butir Menu"
 COM_MENUS_TOOLBAR_SET_HOME="Beranda"
 COM_MENUS_TYPE_ALIAS="Alias Butir Menu"
 COM_MENUS_TYPE_ALIAS_DESC="Buat sebuah alias untuk butir menu yang lain."
-COM_MENUS_TYPE_CHOOSE="Pilih sebuah Tipe Butir Menu:"
+COM_MENUS_TYPE_CHOOSE="Pilih sebuah Jenis Butir Menu:"
 COM_MENUS_TYPE_EXTERNAL_URL="URL Eksternal"
 COM_MENUS_TYPE_EXTERNAL_URL_DESC="Sebuah URL eksternal atau internal."
 COM_MENUS_TYPE_HEADING="Tajuk Menu"
@@ -180,4 +184,4 @@ COM_MENUS_VIEW_NEW_ITEM_TITLE="Pengelolaan Menu: Butir Menu Baru"
 COM_MENUS_VIEW_NEW_MENU_TITLE="Pengelolaan Menu: Tambah Menu"
 COM_MENUS_XML_DESCRIPTION="Komponen untuk membuat menu"
 JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_STATE="Tidak bisa mengubah keadaan yang sudah terbit kalau butir menu induk lebih sedikit dari bagiannya."
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
