--- a/j3x/admin_id-ID/id-ID.com_messages.ini
+++ b/j3x/admin_id-ID/id-ID.com_messages.ini
@@ -1,13 +1,13 @@
-; $Id: id-ID.com_messages.ini 883 2014-02-23 14:48:05Z sikumbang $
+; $Id: id-ID.com_messages.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MESSAGES="Pesan"
 COM_MESSAGES_ADD="Pesan Pribadi Baru"
-COM_MESSAGES_CONFIG_SAVED="Pengaturan berhasil disimpan"
-COM_MESSAGES_CONFIGURATION="Pengaturan Pesan"
+COM_MESSAGES_CONFIG_SAVED="Setelan berhasil disimpan"
+COM_MESSAGES_CONFIGURATION="Setelan Pesan"
 COM_MESSAGES_ERR_INVALID_USER="Salah pengguna"
 COM_MESSAGES_ERR_SEND_FAILED="Pengguna telah mengunci kotak pesan. Pesan gagal."
 COM_MESSAGES_ERROR_INVALID_FROM_USER="Pengirim salah"
@@ -35,7 +35,7 @@ COM_MESSAGES_INVALID_REPLY_ID="Penerima salah"
 COM_MESSAGES_MANAGER_MESSAGES="Pengelolaan Pesan Pribadi: Pesan"
 COM_MESSAGES_MARK_AS_READ="Terbaca"
 COM_MESSAGES_MARK_AS_UNREAD="Belum terbaca"
-COM_MESSAGES_MY_SETTINGS="Pengaturanku"
+COM_MESSAGES_MY_SETTINGS="Setelanku"
 COM_MESSAGES_N_ITEMS_DELETED="%d pesan berhasil dihapus"
 COM_MESSAGES_N_ITEMS_DELETED_1="Pesan berhasil dihapus"
 COM_MESSAGES_N_ITEMS_PUBLISHED="%d pesan berhasil ditandai sebagai terbaca"
@@ -48,18 +48,18 @@ COM_MESSAGES_NEW_MESSAGE_ARRIVED="Sebuah pesan pribadi baru saja datang dari %s"
 COM_MESSAGES_NO_ITEM_SELECTED="Tidak ada pesan terpilih"
 COM_MESSAGES_OPTION_READ="Terbaca"
 COM_MESSAGES_OPTION_UNREAD="Belum Terbaca"
-COM_MESSAGES_PLEASE_LOGIN="Silahkan login ke dalam %s untuk membaca pesan Anda "
+COM_MESSAGES_PLEASE_LOGIN="Silahkan masuk ke %s untuk membaca pesan Anda "
 COM_MESSAGES_RE="Bls:"
 COM_MESSAGES_READ="Pesan"
 COM_MESSAGES_READ_PRIVATE_MESSAGE="Baca Pesan Pribadi"
 COM_MESSAGES_SEARCH_IN_SUBJECT="Cari dalam subjek pesan atau deskripsi"
 COM_MESSAGES_TOOLBAR_MARK_AS_READ="Terbaca"
 COM_MESSAGES_TOOLBAR_MARK_AS_UNREAD="Belum Terbaca"
-COM_MESSAGES_TOOLBAR_MY_SETTINGS="Pengaturanku"
+COM_MESSAGES_TOOLBAR_MY_SETTINGS="Setelanku"
 COM_MESSAGES_TOOLBAR_REPLY="Balas"
 COM_MESSAGES_TOOLBAR_SEND="Kirim"
 COM_MESSAGES_VIEW_PRIVATE_MESSAGE="Pengelolaan Pesan Pribadi: Lihat Pesan"
 COM_MESSAGES_WRITE_PRIVATE_MESSAGE="Pengelolaan Pesan Pribadi: Tulis Pesan Pribadi"
-COM_MESSAGES_XML_DESCRIPTION="Komponen untuk pesan pribadi di dukung di halaman belakang"
+COM_MESSAGES_XML_DESCRIPTION="Komponen untuk pesan pribadi di dukung di halaman admin."
 JLIB_APPLICATION_SAVE_SUCCESS="Pesan berhasil dikirim."
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
