--- a/j3x/admin_id-ID/id-ID.com_modules.ini
+++ b/j3x/admin_id-ID/id-ID.com_modules.ini
@@ -1,13 +1,15 @@
-; $Id: id-ID.com_modules.ini 897 2014-04-21 13:32:55Z dw1rianto $
+; $Id: id-ID.com_modules.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MODULES="Pengelolaan Modul"
-COM_MODULES_ADVANCED_FIELDSET_LABEL="Opsi Lanjutan"
+COM_MODULES_ACTION_EDITFRONTEND="Mengedit Halaman Situs"
+COM_MODULES_ACTION_EDITFRONTEND_COMPONENT_DESC="Mengizinkan pengguna di dalam kelompok untuk mengedit di halaman situs."
+COM_MODULES_ADVANCED_FIELDSET_LABEL="Opsi Tingkat Lanjut"
 COM_MODULES_ASSIGNED_VARIES_EXCEPT="Semua kecuali terpilih"
-COM_MODULES_ASSIGNED_VARIES_ONLY="Hanya terpilih"
+COM_MODULES_ASSIGNED_VARIES_ONLY="Terpilih"
 COM_MODULES_BASIC_FIELDSET_LABEL="Opsi Dasar"
 COM_MODULES_BATCH_POSITION_LABEL="Atur Posisi"
 COM_MODULES_BATCH_POSITION_NOCHANGE="Gunakan Posisi Asli"
@@ -29,38 +31,38 @@ COM_MODULES_EXTENSION_UNPUBLISHED_DISABLED="Modul dinon-aktfikan dan dibatalkan 
 COM_MODULES_EXTENSION_UNPUBLISHED_ENABLED="Modul diaktifkan dan dibatalkan penerbitannya"
 COM_MODULES_FIELD_AUTOMATIC_TITLE_LABEL="Judul otomatis"
 COM_MODULES_FIELD_AUTOMATIC_TITLE_DESC="Atur Ya jika Anda ingin terjemahan otomatis pada judul. Hal ini digunakan tergantung pada templat administrator."
-COM_MODULES_FIELD_CACHE_TIME_DESC="Waktu sebelum modul ini direkam (cache)"
-COM_MODULES_FIELD_CACHE_TIME_LABEL="Waktu Cache"
+COM_MODULES_FIELD_CACHE_TIME_DESC="Waktu sebelum modul ini direkam (tembolok)"
+COM_MODULES_FIELD_CACHE_TIME_LABEL="Waktu Tembolok"
 COM_MODULES_FIELD_CACHING_DESC="Pilih apakah akan merekam isi dari modul ini atau tidak"
-COM_MODULES_FIELD_CACHING_LABEL="Cache"
-COM_MODULES_FIELD_CLIENT_ID_DESC="Lokasi dari modul, halaman depan dan belakang. Anda tidak bisa mengubah nilai ini"
+COM_MODULES_FIELD_CACHING_LABEL="Tembolok"
+COM_MODULES_FIELD_CLIENT_ID_DESC="Lokasi dari modul, halaman situs dan admin. Anda tidak bisa mengubah nilai ini"
 COM_MODULES_FIELD_CLIENT_ID_LABEL="Lokasi Modul"
 COM_MODULES_FIELD_CONTENT_DESC="Teks"
 COM_MODULES_FIELD_CONTENT_LABEL="Teks"
 COM_MODULES_FIELD_MODULE_DESC="Jenis modul"
 COM_MODULES_FIELD_MODULE_LABEL="Jenis Modul"
-COM_MODULES_FIELD_MODULECLASS_SFX_DESC="Akhiran untuk di aplikasikan ke class CSS modul. Hal ini mengizinkan mempersonal tampilan modul."
-COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Sufiks Kelas Modul"
+COM_MODULES_FIELD_MODULECLASS_SFX_DESC="Akhiran untuk diterapkan ke dalam kelas CSS modul. Hal ini mengizinkan tampilan modul kustom."
+COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Akhiran Kelas Modul"
 COM_MODULES_FIELD_NOTE_DESC="Catatan pilihan untuk ditampilkan di daftar modul"
 COM_MODULES_FIELD_NOTE_LABEL="Catatan"
-COM_MODULES_FIELD_POSITION_DESC="Anda dapat memilih posisi tampilan modul dari posisi-posisi yang belum ditetapkan dimana Anda dapat menyaringnya berdasarkan tipe dan templat, atau masukkan posisi modul Anda sendiri dengan mengetikkan nama di dalam kolom yang disediakan lalu Simpan."
+COM_MODULES_FIELD_POSITION_DESC="Anda dapat pilih sebuah modul dari daftar posisi-posisi yang belum ditetapkan atau masukkan posisi modul Anda sendiri dengan mengetikkan namanya ke dalam kolom kemudian tekan Enter."
 COM_MODULES_FIELD_POSITION_LABEL="Posisi"
 COM_MODULES_FIELD_PUBLISH_DOWN_DESC="Pilihan waktu untuk mengakhiri penerbitan modul"
 COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Akhir Penerbitan"
 COM_MODULES_FIELD_PUBLISH_UP_DESC="Pilihan waktu untuk memulai penerbitan modul"
 COM_MODULES_FIELD_PUBLISH_UP_LABEL="Mulai Penerbitan"
-COM_MODULES_FIELD_PUBLISHED_DESC="Jika diterbitkan, modul ini akan ditampilkan pada halaman depan atau halaman belakang situs tergantung dari modul."
+COM_MODULES_FIELD_PUBLISHED_DESC="Jika diterbitkan, modul ini akan ditampilkan pada halaman situs atau halaman admin tergantung dari modul."
 COM_MODULES_FIELD_SHOWTITLE_DESC="Tampilkan/Sembunyikan judul modul pada tampilan. Pengaruh akan bergantung pada gaya krom pada templat"
 COM_MODULES_FIELD_SHOWTITLE_LABEL="Tampilkan Judul"
 COM_MODULES_FIELD_TITLE_DESC="Modul harus memiliki judul"
-COM_MODULES_FIELD_VALUE_NOCACHING="Jangan cache"
+COM_MODULES_FIELD_VALUE_NOCACHING="Jangan tembolok"
 COM_MODULES_FIELD_MODULE_TAG_LABEL="Tagar Modul"
 COM_MODULES_FIELD_MODULE_TAG_DESC="Tagar HTML untuk modul"
 COM_MODULES_FIELD_BOOTSTRAP_SIZE_LABEL="Ukuran Bootstrap"
 COM_MODULES_FIELD_BOOTSTRAP_SIZE_DESC="Opsi untuk mengkhususkan berapa kolom modul akan digunakan."
-COM_MODULES_FIELD_HEADER_TAG_LABEL="Tagar Header"
-COM_MODULES_FIELD_HEADER_TAG_DESC="Tagar HTML untuk tajuk/judul header modul"
-COM_MODULES_FIELD_HEADER_CLASS_LABEL="Kelas Header"
+COM_MODULES_FIELD_HEADER_TAG_LABEL="Tagar Tajuk"
+COM_MODULES_FIELD_HEADER_TAG_DESC="Tagar HTML untuk tajuk/judul modul"
+COM_MODULES_FIELD_HEADER_CLASS_LABEL="Kelas Tajuk"
 COM_MODULES_FIELD_HEADER_CLASS_DESC="Kelas CSS untuk tajuk/judul modul"
 COM_MODULES_FIELD_MODULE_STYLE_LABEL="Gaya Modul"
 COM_MODULES_FIELD_MODULE_STYLE_DESC="Gunakan opsi ini untuk mencoret gaya templat diposisinya."
@@ -118,10 +120,10 @@ COM_MODULES_POSITION_ANALYTICS="Analisa"
 COM_MODULES_POSITION_BANNER="Banner"
 COM_MODULES_POSITION_BOTTOM="Bawah"
 COM_MODULES_POSITION_BREADCRUMB="Jejak"
-COM_MODULES_POSITION_BREADCRUMBS="Jejaks"
+COM_MODULES_POSITION_BREADCRUMBS="Jejak"
 COM_MODULES_POSITION_DEBUG="Debug"
-COM_MODULES_POSITION_FOOTER="Bagian Kaki"
-COM_MODULES_POSITION_HEADER="Bagian Kepala"
+COM_MODULES_POSITION_FOOTER="Kaki halaman"
+COM_MODULES_POSITION_HEADER="Kepala halaman"
 COM_MODULES_POSITION_LEFT2="Kiri 2"
 COM_MODULES_POSITION_LEFT="Kiri"
 COM_MODULES_POSITION_MAINNAV="Navigasi Utama"
@@ -168,12 +170,12 @@ COM_MODULES_POSITION_USER7="User 7"
 COM_MODULES_POSITION_USER8="User 8"
 COM_MODULES_SAVE_SUCCESS="Modul berhasil disimpan"
 COM_MODULES_TYPE_CHOOSE="Pilih Jenis Modul:"
-COM_MODULES_XML_DESCRIPTION="Komponen untuk pengelolaan modul di halaman belakang"
+COM_MODULES_XML_DESCRIPTION="Komponen untuk pengelolaan modul di halaman admin."
 COM_MODULES_ADD_CUSTOM_POSITION="Tambah posisi kustom"
 COM_MODULES_CUSTOM_POSITION="Posisi Kustom"
-COM_MODULES_TYPE_OR_SELECT_POSITION="Tipe atau Pilih sebuah Posisi"
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+COM_MODULES_TYPE_OR_SELECT_POSITION="Jenis atau Pilih sebuah Posisi"
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
 COM_MODULES_DESELECT="Batalkan Pilihan"
 COM_MODULES_EXPAND="Perluas"
-COM_MODULES_COLLAPSE="Peruntuhan (Kolaps)"
+COM_MODULES_COLLAPSE="Susut"
 COM_MODULES_SUBITEMS="Sub-butir:"
