--- a/j3x/admin_id-ID/id-ID.com_postinstall.ini
+++ b/j3x/admin_id-ID/id-ID.com_postinstall.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_postinstall.ini 889 2014-02-24 01:30:44Z dw1rianto $
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; $Id: id-ID.com_postinstall.ini 3.4 2015-02-22 $
+; Tim Hanacaraka Joomla! Indonesia
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -15,4 +15,4 @@ COM_POSTINSTALL_LBL_RELEASENEWS="Rilis Berita (dari Joomla.org)"
 COM_POSTINSTALL_LBL_SINCEVERSION="Sejak versi %s"
 COM_POSTINSTALL_MESSAGES_TITLE="Pesan Paska-Pemasangan untuk %s"
 COM_POSTINSTALL_TITLE_JOOMLA="Joomla!"
-COM_POSTINSTALL_XML_DESCRIPTION="Menampilkan pesan paska-pemasangan dan paska-pemutakhiran untuk Joomla! dan ekstensinya"
+COM_POSTINSTALL_XML_DESCRIPTION="Menampilkan pesan paska-pemasangan dan paska-pemutakhiran untuk Joomla! dan ekstensinya."
