--- a/j3x/admin_id-ID/id-ID.com_search.ini
+++ b/j3x/admin_id-ID/id-ID.com_search.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_search.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_search.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -32,12 +32,12 @@ COM_SEARCH_LOGGING_DISABLED="Menonaktifkan pengumpulan statistik"
 COM_SEARCH_LOGGING_ENABLED="Mengaktifkan pengumpulan statistik"
 COM_SEARCH_MANAGER_SEARCHES="Pengelolaan Pencarian: Analisa Ketentuan Pencarian"
 COM_SEARCH_MOST_POPULAR="Kepopuleran"
-COM_SEARCH_NEWEST_FIRST="Yang Terbaru Yang Pertama"
+COM_SEARCH_NEWEST_FIRST="Terbaru Pertama"
 COM_SEARCH_NO_RESULTS="Mati"
-COM_SEARCH_OLDEST_FIRST="Yang Terlama Yang Pertama"
+COM_SEARCH_OLDEST_FIRST="Terlama Pertama"
 COM_SEARCH_ORDERING_DESC="Menentukan urutan hasil yang ada di dalam daftar"
 COM_SEARCH_ORDERING_LABEL="Urutan hasil"
 COM_SEARCH_SAVED_SEARCH_OPTIONS="Opsi pencarian yang disimpan"
 COM_SEARCH_SEARCH_IN_PHRASE="Mencari dalam frase."
 COM_SEARCH_SHOW_SEARCH_RESULTS="Tampilkan Hasil Pencarian"
-COM_SEARCH_XML_DESCRIPTION="Komponen untuk fungsi pencarian"
+COM_SEARCH_XML_DESCRIPTION="Komponen untuk fungsi pencarian."
