--- a/j3x/admin_id-ID/id-ID.com_tags.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_tags.sys.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_tags.sys.ini 897 2014-04-21 13:32:55Z dw1rianto $
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; $Id: id-ID.com_tags.sys.ini 3.4 2015-02-22 $
+; Tim Hanacaraka Joomla! Indonesia
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -32,6 +32,6 @@ COM_TAGS_TAG_VIEW_LIST_TITLE="Daftar butir tagar"
 COM_TAGS_TAGS="Tagar"
 COM_TAGS_TAGS_VIEW_COMPACT_DESC="Daftar kompak tagar"
 COM_TAGS_TAGS_VIEW_COMPACT_TITLE="Lihat Tagar Kompak"
-COM_TAGS_TAGS_VIEW_DEFAULT_DESC="Tautanini ke daftar detail semua tagar"
+COM_TAGS_TAGS_VIEW_DEFAULT_DESC="Tautan ini ke daftar detail semua tagar"
 COM_TAGS_TAGS_VIEW_DEFAULT_TITLE="Daftar semua tagar"
-COM_TAGS_XML_DESCRIPTION="Komponen untuk butir-butir tagging konten"
+COM_TAGS_XML_DESCRIPTION="Komponen ini mengelola tagar."
