--- a/j3x/admin_id-ID/id-ID.com_templates.ini
+++ b/j3x/admin_id-ID/id-ID.com_templates.ini
@@ -1,25 +1,25 @@
-; $Id: id-ID.com_templates.ini 883 2014-02-23 14:48:05Z sikumbang $
+; $Id: id-ID.com_templates.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
+; Note : All ini berkass need to be saved as UTF-8
 
 COM_TEMPLATES="Pengelolaan Templat"
-COM_TEMPLATES_ADVANCED_FIELDSET_LABEL="Opsi Lanjutan"
-COM_TEMPLATES_ARE_YOU_SURE="Anda yakin?"
+COM_TEMPLATES_ADVANCED_FIELDSET_LABEL="Opsi Tingkat Lanjut"
+COM_TEMPLATES_ARE_YOU_SURE="Apakah Anda yakin?"
 COM_TEMPLATES_ASSIGNED_1="Ditentukan ke satu butir menu"
 COM_TEMPLATES_ASSIGNED_MORE="Ditentukan ke %d butir menu"
 COM_TEMPLATES_BASIC_FIELDSET_LABEL="Opsi Dasar"
 COM_TEMPLATES_BUTTON_CLOSE_FILE="Tutup Berkas"
-COM_TEMPLATES_BUTTON_COPY_TEMPLATE="salin Templat"
+COM_TEMPLATES_BUTTON_COPY_TEMPLATE="Salin Templat"
 COM_TEMPLATES_BUTTON_COPY_FILE="Salin Berkas"
 COM_TEMPLATES_BUTTON_CREATE="Buat"
-COM_TEMPLATES_BUTTON_CROP="Krop"
+COM_TEMPLATES_BUTTON_CROP="Potong"
 COM_TEMPLATES_BUTTON_DELETE="Hapus"
 COM_TEMPLATES_BUTTON_DELETE_FILE="Hapus Berkas"
-COM_TEMPLATES_BUTTON_EXTRACT_ARCHIVE="Ekstrak disini"
+COM_TEMPLATES_BUTTON_EXTRACT_ARCHIVE="Urai disini"
 COM_TEMPLATES_BUTTON_FILE="Berkas Baru"
-COM_TEMPLATES_BUTTON_FOLDERS="Kelola Folder"
+COM_TEMPLATES_BUTTON_FOLDERS="Kelola Pelipat"
 COM_TEMPLATES_BUTTON_LESS="Susun LESS"
 COM_TEMPLATES_BUTTON_PREVIEW="Pratinjau Templat"
 COM_TEMPLATES_BUTTON_RENAME="Ganti nama"
@@ -32,21 +32,21 @@ COM_TEMPLATES_COMPILE_ERROR="Sebuah kesalahan terjadi. Gagal menyusun."
 COM_TEMPLATES_COMPILE_LESS="Handa harus menyusun %s untuk menghasilkan berkas css."
 COM_TEMPLATES_COMPILE_SUCCESS="Berhasil menyusun LESS."
 COM_TEMPLATES_CONFIG_FIELDSET_DESC="Konfigurasi Global untuk Templat"
-COM_TEMPLATES_CONFIG_POSITIONS_DESC="Aktifkan pratinjau posisi-posisi modul di dalam templat dengan cara menambahkan tp=1 ke URL web (contoh: http://www.situs.com?tp=1) untuk melihat posisi-posisi modul templat. Juga aktifkan tombol Pratinjau yang ada di dalam daftar templat. Silahkan segarkan kembali halaman setelah mengubah pengaturan ini."
+COM_TEMPLATES_CONFIG_POSITIONS_DESC="Aktifkan pratinjau posisi-posisi modul di dalam templat dengan cara menambahkan tp=1 ke URL web (contoh: http://www.situs.com?tp=1) untuk melihat posisi-posisi modul templat. Juga aktifkan tombol Pratinjau yang ada di dalam daftar templat. Silahkan segarkan kembali halaman setelah mengubah setelan ini."
 COM_TEMPLATES_CONFIG_POSITIONS_LABEL="Pratinjau Posisi Modul"
 COM_TEMPLATES_CONFIG_FONT_DESC="Jenis berkas ini akan tersedia untuk pratinjau font."
 COM_TEMPLATES_CONFIG_FONT_LABEL="Format Font yang Valid"
-COM_TEMPLATES_CONFIG_IMAGE_DESC="Jenis berkas ini akan tersedia untuk krop dan perubahan ukuran."
+COM_TEMPLATES_CONFIG_IMAGE_DESC="Jenis berkas ini akan tersedia untuk potong dan perubahan ukuran."
 COM_TEMPLATES_CONFIG_IMAGE_LABEL="Format Gambar yang Valid"
 COM_TEMPLATES_CONFIG_SOURCE_DESC="Jenis berkas ini akan tersedia untuk mengedit dalam editor."
 COM_TEMPLATES_CONFIG_SOURCE_LABEL="Sumber Format yang Valid"
 COM_TEMPLATES_CONFIG_SUPPORTED_DESC="Hati-hati sebelum mengubah jenis berkas. Baca tips sebelum mengedit."
 COM_TEMPLATES_CONFIG_SUPPORTED_LABEL="Format berkas yang didukung"
-COM_TEMPLATES_CONFIG_UPLOAD_DESC="Ukuran unggahan maksimum untuk berkas di dalam Template Manager."
+COM_TEMPLATES_CONFIG_UPLOAD_DESC="Ukuran unggahan maksimal untuk berkas di dalam Template Manager."
 COM_TEMPLATES_CONFIG_UPLOAD_LABEL="Ukuran Unggah (MB)"
 COM_TEMPLATES_CONFIGURATION="Opsi Pengelolaan Templat"
 COM_TEMPLATES_COPY_SUCCESS="Templat baru bernama %s telah berhasil dipasang."
-COM_TEMPLATES_CROP_AREA_ERROR="Wilayah krop belum dipilih."
+COM_TEMPLATES_CROP_AREA_ERROR="Wilayah potong belum dipilih."
 COM_TEMPLATES_DIRECTORY_NOT_WRITABLE="Direktori templat tidak bisa ditulisi. Beberapa fitur mungkin tidak bekerja dengan baik."
 COM_TEMPLATES_ERR_XML="Data XML templat tidak tersedia"
 COM_TEMPLATES_ERROR_CANNOT_DELETE_LAST_STYLE="Tidak dapat menghapus gaya terakhir templat"
@@ -70,7 +70,7 @@ COM_TEMPLATES_ERROR_FONT_FILE_NOT_FOUND="Berkas Font tidak ditemukan."
 COM_TEMPLATES_ERROR_IMAGE_FILE_NOT_FOUND="Berkas gambar tidak ditemukan."
 COM_TEMPLATES_ERROR_INDEX_DELETE="Berkas index.php tidak dapat dihapus. Lakukan perubahan dalam editor jika Anda ingin mengubah berkas"
 COM_TEMPLATES_ERROR_INVALID_FROM_NAME="Templat yang ingin disalin tidak dapat ditemukan."
-COM_TEMPLATES_ERROR_INVALID_TEMPLATE_NAME="Nama Templat salah . Silahkan gunakan Huruf, Angka, strip/Tanda penghubung, dan gari Bawah."
+COM_TEMPLATES_ERROR_INVALID_TEMPLATE_NAME="Nama Templat salah . Silahkan gunakan Huruf, Angka, strip/Tanda penghubung, dan garis Bawah."
 COM_TEMPLATES_ERROR_RENAME_INDEX="Nama berkas index.php tidak dapat diubah."
 COM_TEMPLATES_ERROR_ROOT_DELETE="Akar direktori tidak dapat dihapus."
 COM_TEMPLATES_ERROR_SAVE_DISABLED_TEMPLATE="Tidak bisa menyimpan gaya yang terhubung dengan sebuah templat nonaktif"
@@ -80,11 +80,11 @@ COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_WRITABLE="Sumber berkas tidak-dapat ditulisi
 COM_TEMPLATES_ERROR_SOURCE_ID_FILENAME_MISMATCH="ID yang disimpan tidak sesuai dengan yang dimasukkan"
 COM_TEMPLATES_ERROR_STYLE_NOT_FOUND="Gaya tidak ditemukan"
 COM_TEMPLATES_ERROR_STYLE_REQUIRES_TITLE="Gaya mewajibkan sebuah titel"
-COM_TEMPLATES_ERROR_TEMPLATE_FOLDER_NOT_FOUND="Folder templat tidak ditemukan"
+COM_TEMPLATES_ERROR_TEMPLATE_FOLDER_NOT_FOUND="Pelipat templat tidak ditemukan"
 COM_TEMPLATES_ERROR_UPLOAD_INPUT="Berkas yang ditemukan"
-COM_TEMPLATES_ERROR_WARNFILENAME="Nama file tidak valid. Silakan perbaiki nama file dan unggah lagi"
+COM_TEMPLATES_ERROR_WARNFILENAME="Nama berkas tidak valid. Silakan perbaiki nama berkas dan unggah lagi"
 COM_TEMPLATES_ERROR_WARNFILETOOLARGE="Berkas lebih besar dari 2 MB tidak dapat diunggah."
-COM_TEMPLATES_ERROR_WARNFILETYPE="Format file tidak didukung"
+COM_TEMPLATES_ERROR_WARNFILETYPE="Format berkas tidak didukung"
 COM_TEMPLATES_ERROR_WARNIEXSS="Tidak bisa unggah. Berisi XSS."
 COM_TEMPLATES_FIELD_CLIENT_DESC="Apakah templat ini akan digunakan untuk bagian depan (0) atau bagian belakang (1)"
 COM_TEMPLATES_FIELD_CLIENT_LABEL="Lokasi"
@@ -107,8 +107,8 @@ COM_TEMPLATES_FILE_CREATE_SUCCESS="Berkas berhasil dibuat."
 COM_TEMPLATES_FILE_CONTENT_PREVIEW="Pratinjau Konten Berkas"
 COM_TEMPLATES_FILE_COPY_FAIL="Gagal untuk menyalin berkas."
 COM_TEMPLATES_FILE_COPY_SUCCESS="Berkas tersebut telah berhasil disalin sebagai %s."
-COM_TEMPLATES_FILE_CROP_ERROR="Gagal mengkrop gambar."
-COM_TEMPLATES_FILE_CROP_SUCCESS="Gambar berhasil dikrop."
+COM_TEMPLATES_FILE_CROP_ERROR="Gagal memotong gambar."
+COM_TEMPLATES_FILE_CROP_SUCCESS="Gambar berhasil dipotong."
 COM_TEMPLATES_FILE_DELETE_ERROR="Tidak dapat menghapus berkas."
 COM_TEMPLATES_FILE_DELETE_FAIL="Tidak dapat menghapus berkas."
 COM_TEMPLATES_FILE_DELETE_SUCCESS="Berkas berhasil dihapus."
@@ -121,7 +121,7 @@ COM_TEMPLATES_FILE_PERMISSIONS="Perizinan Berkas adalah"
 COM_TEMPLATES_FILE_RENAME_ERROR="Terjadi kesalahan mengubah nama berkas."
 COM_TEMPLATES_FILE_RENAME_SUCCESS="Berhasil mengganti nama berkas."
 COM_TEMPLATES_FILE_RESIZE_ERROR="Gagal untuk mengubah ukuran gambar."
-COM_TEMPLATES_FILE_RESIZE_SUCCESS="Berhasi mengubah ukuran gambar."
+COM_TEMPLATES_FILE_RESIZE_SUCCESS="Berhasil mengubah ukuran gambar."
 COM_TEMPLATES_FILE_SAVE_SUCCESS="Berkas berhasil disimpan"
 COM_TEMPLATES_FILE_UNSUPPORTED_ARCHIVE="Berkas yang tidak didukung terlihat di dalam berkas zip."
 COM_TEMPLATES_FILE_UPLOAD_ERROR="Ada kesalahan mengunggah berkas."
@@ -137,10 +137,10 @@ COM_TEMPLATES_FOLDER_NAME="Nama Direktori"
 COM_TEMPLATES_FOLDER_NOT_EXISTS="Direktori tidak ada."
 COM_TEMPLATES_FTP_DESC="Untuk mutakhirkan berkas templat, biasanya Joomla! akan membutuhkan detail akun FTP Anda. Silahkan masukkan ke dalam kolom isian dibawah"
 COM_TEMPLATES_FTP_TITLE="Detil Masuk FTP"
-COM_TEMPLATES_GRID_UNSET_LANGUAGE="Tidak-mengatur Standar %s"
+COM_TEMPLATES_GRID_UNSET_LANGUAGE="Tidak mengatur Standar %s"
 COM_TEMPLATES_HOME_BUTTON="Dokumentasi"
 COM_TEMPLATES_HOME_HEADING="Pilih Berkas"
-COM_TEMPLATES_HOME_TEXT="Anda dapat memilih dari sejumlah pilihan untuk mengubah tampilan templat Anda. Pengelolaan Templat mendukung sumber berkas, berkas gambar, berkas Font, arsip Zip dan sebagian besar tipe operasi bisa dilakukan pada berkas-berkas tersbut. Periksa dokumentasi jika Anda ingin mengetahui lebih banyak tentang hal ini."
+COM_TEMPLATES_HOME_TEXT="Anda dapat memilih dari sejumlah pilihan untuk mengubah tampilan templat Anda. Pengelolaan Templat mendukung sumber berkas, berkas gambar, berkas Font, arsip Zip dan sebagian besar jenis operasi bisa dilakukan pada berkas-berkas tersebut. Periksa dokumentasi jika Anda ingin mengetahui lebih banyak tentang hal ini."
 COM_TEMPLATES_HEADING_ASSIGNED="Ditentukan"
 COM_TEMPLATES_HEADING_DEFAULT="Standar"
 COM_TEMPLATES_HEADING_STYLE="Gaya"
@@ -154,7 +154,7 @@ COM_TEMPLATES_MANAGER="Pengelolaan Templat"
 COM_TEMPLATES_MANAGER_ADD_STYLE="Pengelolaan Templat: Tambah Gaya"
 COM_TEMPLATES_MANAGER_EDIT_FILE="Pengelolaan Templat: Edit Berkas"
 COM_TEMPLATES_MANAGER_EDIT_STYLE="Pengelolaan Templat: Edit gaya"
-COM_TEMPLATES_MANAGE_FOLDERS="Pengelolaan Folder"
+COM_TEMPLATES_MANAGE_FOLDERS="Pengelolaan Pelipat"
 COM_TEMPLATES_MANAGER_STYLES="Pengelolaan Templat: Gaya"
 COM_TEMPLATES_MANAGER_TEMPLATES="Pengelolaan Templat: Templat"
 COM_TEMPLATES_MANAGER_VIEW_TEMPLATE="Pengelolaan Templat: Mengkustom Templat"
@@ -162,14 +162,14 @@ COM_TEMPLATES_MENU_CHANGED_1="Satu butir menu telah ditentukan atau tidak ke gay
 COM_TEMPLATES_MENU_CHANGED_MORE="%d butir menu telah ditentukan atau tidak ke gaya ini"
 COM_TEMPLATES_MENUS_ASSIGNMENT="Penentuan Menu"
 COM_TEMPLATES_MODAL_FILE_DELETE="Berkas %s akan dihapus."
-COM_TEMPLATES_MSG_MANAGE_NO_STYLES="Tidak ada gaya yang dipasang yang sesuai dengan query Anda"
-COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="Tidak templat terpasang yang sesuai dengan query Anda"
-COM_TEMPLATES_N_ITEMS_DELETED="%d gaya templat berhasi dihapus"
+COM_TEMPLATES_MSG_MANAGE_NO_STYLES="Tidak ada gaya yang dipasang yang sesuai dengan kueri Anda"
+COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="Tidak templat terpasang yang sesuai dengan kueri Anda"
+COM_TEMPLATES_N_ITEMS_DELETED="%d gaya templat berhasil dihapus"
 COM_TEMPLATES_N_ITEMS_DELETED_1="Gaya templat berhasil dihapus"
 COM_TEMPLATES_NEW_FILE_HEADER="Buat atau Unggah berkas baru."
 COM_TEMPLATES_NEW_FILE_NAME="Nama Berkas baru"
-COM_TEMPLATES_NEW_FILE_SELECT="Pilih tipe berkas"
-COM_TEMPLATES_NEW_FILE_TYPE="Tipe Berkas"
+COM_TEMPLATES_NEW_FILE_SELECT="Pilih jenis berkas"
+COM_TEMPLATES_NEW_FILE_TYPE="Jenis Berkas"
 COM_TEMPLATES_NO_TEMPLATE_SELECTED="Tidak ada templat yang dipilih"
 COM_TEMPLATES_OVERRIDE_CREATED="Penimpa dibuat dalam"
 COM_TEMPLATES_OVERRIDE_EXISTS="Penimpa sudah ada."
@@ -209,7 +209,7 @@ COM_TEMPLATES_TEMPLATE_EDIT_PRINTVIEW="Edit tampilan cetak templat"
 COM_TEMPLATES_TEMPLATE_FILENAME="Mengedit berkas "_QQ_"%s"_QQ_" di templat "_QQ_"%s"_QQ_"."
 COM_TEMPLATES_TEMPLATE_FILES="Berkas Templat"
 COM_TEMPLATES_TEMPLATE_HTML="Berkas HTML"
-COM_TEMPLATES_TEMPLATE_MASTER_FILES="Berkas Master Templat"
+COM_TEMPLATES_TEMPLATE_MASTER_FILES="Berkas Templat Master"
 COM_TEMPLATES_TEMPLATE_NEW_NAME_DESC="Nama Templat Baru::Masukkan nama baru templat baru. Silahkan gunakan huruf, angka, dan garis bawah saja."
 COM_TEMPLATES_TEMPLATE_NEW_NAME_LABEL="Nama Templat Baru"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW="Tidak ada pratinjau yang tersedia. Anda bisa mengaktifkannya di dalam opsi."
@@ -220,5 +220,5 @@ COM_TEMPLATES_TEMPLATE_PREVIEW="Pratinjau"
 COM_TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC="Mencari nama templat atau nama direktori."
 COM_TEMPLATES_TOGGLE_FULL_SCREEN="Tekan Ctrl-Q untuk berpindah ke pengeditan Layar Penuh."
 COM_TEMPLATES_TOOLBAR_SET_HOME="Standar"
-COM_TEMPLATES_XML_DESCRIPTION="Komponen ini mengelola templat"
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+COM_TEMPLATES_XML_DESCRIPTION="Komponen ini mengelola templat."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
