--- a/j3x/admin_id-ID/id-ID.com_content.ini
+++ b/j3x/admin_id-ID/id-ID.com_content.ini
@@ -1,14 +1,14 @@
-; $Id: id-ID.com_content.ini 900 2014-04-24 23:03:14Z dw1rianto $
+; $Id: id-ID.com_content.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_CATEGORIES_CATEGORY_EDIT_TITLE="Pengelolaan Kategori: Edit Kategori Artikel"
 COM_CONTENT="Artikel"
-COM_CONTENT_ACCESS_DELETE_DESC="Pengaturan baru untuk <strong>menghapus tindakan</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
-COM_CONTENT_ACCESS_EDIT_DESC="Pengaturan baru untuk <strong>edit tindakan</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
-COM_CONTENT_ACCESS_EDITSTATE_DESC="Pengaturan baru untuk <strong>edit state actions</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CONTENT_ACCESS_DELETE_DESC="Setelan baru untuk <strong>menghapus tindakan</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CONTENT_ACCESS_EDIT_DESC="Setelan baru untuk <strong>edit tindakan</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CONTENT_ACCESS_EDITSTATE_DESC="Setelan baru untuk <strong>edit state actions</strong> pada artikel ini dan pengaturan gabungan berdasarkan kategori induk dan izin kelompok."
 COM_CONTENT_ARTICLE_CONTENT="Konten"
 COM_CONTENT_ARTICLE_DETAILS="Detail Artikel"
 COM_CONTENT_ARTICLES_TITLE="Pengelolaan Artikel: Artikel"
@@ -16,18 +16,18 @@ COM_CONTENT_ATTRIBS_ARTICLE_SETTINGS_LABEL="Opsi Artikel"
 COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Opsi Artikel"
 COM_CONTENT_BATCH_MENU_LABEL="Pilih Kategori untuk Dipindahkan/Disalin"
 COM_CONTENT_BATCH_OPTIONS="Proses sekaligus kumpulan artikel yang dipilih"
-COM_CONTENT_BATCH_TIP="Jika salah satu tindakan dipilih maka akan diaplikasikan kepada artikel yang akan disalin atau dipindahkan. Selain itu semua tindakan akan diaplikasikan ke artikel yang dipilih."
+COM_CONTENT_BATCH_TIP="Jika salah satu tindakan dipilih maka akan diterapkan kepada artikel yang akan disalin atau dipindahkan. Selain itu semua tindakan akan diterapkan ke artikel yang dipilih."
 COM_CONTENT_CHANGE_ARTICLE="Pilih atau Edit artikel"
 COM_CONTENT_CHANGE_ARTICLE_BUTTON="Pilih / Edit"
 COM_CONTENT_CHOOSE_CATEGORY_DESC="Pilih sebuah kategori induk"
-COM_CONTENT_CONFIG_ARTICLE_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk tata letak artikel kecuali mereka diedit untuk butir menu tertentu."
-COM_CONTENT_CONFIG_BLOG_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk blog atau tata letak fitur kecuali mereka diedit untuk butir menu tertentu."
-COM_CONTENT_CONFIG_BLOG_SETTINGS_LABEL="Tata letak Blog / Fitur"
-COM_CONTENT_CONFIG_CATEGORIES_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk Opsi Kategori-kategori Artikel, kecuali mereka diedit di kategori masing-masing atau pengaturan menu."
-COM_CONTENT_CONFIG_CATEGORY_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk Opsi Kategori Artikel kecuali mereka diedit di kategori masing-masing atau pengaturan menu."
+COM_CONTENT_CONFIG_ARTICLE_SETTINGS_DESC="Setelan ini diterapkan untuk tata letak artikel kecuali mereka diedit untuk butir menu tertentu."
+COM_CONTENT_CONFIG_BLOG_SETTINGS_DESC="Setelan ini diterapkan untuk blog atau tata letak pilihan kecuali mereka diedit untuk butir menu tertentu."
+COM_CONTENT_CONFIG_BLOG_SETTINGS_LABEL="Tata letak Blog / Pilihan"
+COM_CONTENT_CONFIG_CATEGORIES_SETTINGS_DESC="Setelan ini diterapkan untuk Opsi Kategori-kategori Artikel, kecuali mereka diedit di kategori masing-masing atau pengaturan menu."
+COM_CONTENT_CONFIG_CATEGORY_SETTINGS_DESC="Setelan ini diterapkan untuk Opsi Kategori Artikel kecuali mereka diedit di kategori masing-masing atau pengaturan menu."
 COM_CONTENT_CONFIG_EDITOR_LAYOUT="Opsi ini mengendalikan tata letak halaman edit artikel."
-COM_CONTENT_CONFIG_INTEGRATION_SETTINGS_DESC="Pengaturan ini menentukan bagaimana Komponen Artikel akan diintegrasikan dengan ekstensi lainnya."
-COM_CONTENT_CONFIG_LIST_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk Daftar Opsi Tata Letak kecuali mereka diedit untuk butir menu tertentu atau kategori."
+COM_CONTENT_CONFIG_INTEGRATION_SETTINGS_DESC="Setelan ini menentukan bagaimana Komponen Artikel akan diintegrasikan dengan ekstensi lainnya."
+COM_CONTENT_CONFIG_LIST_SETTINGS_DESC="Setelan ini diterapkan untuk Daftar Opsi Tata Letak kecuali mereka diedit untuk butir menu tertentu atau kategori."
 COM_CONTENT_CONFIGURATION="Opsi Pengelolaan Artikel"
 COM_CONTENT_CREATE_ARTICLE_CATEGORY_LABEL="Kategori standar"
 COM_CONTENT_CREATE_ARTICLE_CATEGORY_DESC="Jika memilih 'Ya', halaman ini hanya akan membiarkan Anda membuat artikel di dalam kategori yang dipilih dibawah ini."
@@ -65,7 +65,7 @@ COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL="Deskripsi gambar"
 COM_CONTENT_FIELD_IMAGE_OPTIONS="Opsi Gambar"
 COM_CONTENT_FIELD_INFOBLOCK_POSITION_DESC="Letakkan blok informasi artikel diatas atau dibawah teks atau pisahkannya menjadi dua blok, satu diatas dan yang lainnya dibawah."
 COM_CONTENT_FIELD_INFOBLOCK_POSITION_LABEL="Posisi Info Artikel"
-COM_CONTENT_FIELD_INTRO_DESC="Gambar untuk tata letak intro teks blog dan fitur"
+COM_CONTENT_FIELD_INTRO_DESC="Gambar untuk tata letak intro teks blog dan pilihan"
 COM_CONTENT_FIELD_INTRO_LABEL="Gambar Intro"
 COM_CONTENT_FIELD_INTROTEXT="Teks Intro"
 COM_CONTENT_FIELD_LANGUAGE_DESC="Bahasa yang dipakai artikel."
@@ -87,7 +87,7 @@ COM_CONTENT_FIELD_SHOW_TAGS_LABEL="Tampilkan Tagar"
 ;COM_CONTENT_FIELD_SHOW_CAT_TAGS_LABEL="Show Tags"
 ;COM_CONTENT_FIELD_SHOW_TAGS_DESC="Show the tags for each article"
 ;COM_CONTENT_FIELD_SHOW_TAGS_LABEL="Show Tags"
-COM_CONTENT_FIELD_URL_DESC="Tautan untuk mengalihkan pengguna. Haruslah URL penuh termasuk http:// atau protokol lainnya (contoh: http://joomla.org)."
+COM_CONTENT_FIELD_URL_DESC="Tautan sebenar dimana pengguna akan dialihkan."
 COM_CONTENT_FIELD_URL_LINK_TEXT_DESC="Teks untuk tautan"
 COM_CONTENT_FIELD_URL_LINK_TEXT_LABEL="Teks Tautan"
 COM_CONTENT_FIELD_URLA_LABEL="Tautan A"
@@ -99,7 +99,7 @@ COM_CONTENT_FIELD_URLC_LINK_TEXT_LABEL="Teks Tautan C"
 COM_CONTENT_FIELD_URLS_OPTIONS="Opsi Tautan"
 COM_CONTENT_FIELD_URLSPOSITION_LABEL="Posisi Tautan"
 COM_CONTENT_FIELD_URLSPOSITION_DESC="Tampilkan tautan diatas atau dibawah konten"
-COM_CONTENT_FIELD_VALUE_USE_ARTICLE_SETTINGS="Gunakan Pengaturan"
+COM_CONTENT_FIELD_VALUE_USE_ARTICLE_SETTINGS="Gunakan Setelan"
 COM_CONTENT_FIELD_VERSION_DESC="Jumlah berapa kali artikel ini direvisi."
 COM_CONTENT_FIELD_VERSION_LABEL="Revisi"
 COM_CONTENT_FIELD_XREFERENCE_DESC="Referensi pilihan untuk menghubungkan sumber data."
@@ -115,7 +115,7 @@ COM_CONTENT_FLOAT_INTRO_LABEL="Posisi Gambar Intro"
 COM_CONTENT_HEADING_ASSOCIATION="Hubungan"
 COM_CONTENT_ID_LABEL="ID"
 COM_CONTENT_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Hubungan Butir Konten"
-COM_CONTENT_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya Multibahasa! Pilihan ini hanya akan tampil jika parameter Penyaring Bahasa 'Hubungan Butir' diatur ke 'Ya'. Pilih sebuah butir konten untuk bahasa target. Hubungan ini akan mengizinkan modul Pengubah Bahasa mengalihkan ke butir konten yang terhubung dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul pengubah Bahasa di halaman yang diinginkan. Sebuah butir konten yang diatur ke 'Semua' bahasa tidak dapat dihubungkan."
+COM_CONTENT_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya Multibahasa! Pilihan ini hanya akan tampil jika parameter Penyaring Bahasa 'Hubungan Butir' diatur ke 'Ya'. Pilih sebuah butir konten untuk bahasa target. Hubungan ini akan mengizinkan modul Ganti Bahasa mengalihkan ke butir konten yang terhubung dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul pengubah Bahasa di halaman yang diinginkan. Sebuah butir konten yang diatur ke 'Semua' bahasa tidak dapat dihubungkan."
 COM_CONTENT_LEFT="Kiri"
 COM_CONTENT_MONTH="Bulan"
 COM_CONTENT_N_ITEMS_ARCHIVED="%s artikel diarsipkan."
@@ -125,10 +125,14 @@ COM_CONTENT_N_ITEMS_CHECKED_IN_1="%d artikel berhasil diperiksa"
 COM_CONTENT_N_ITEMS_CHECKED_IN_MORE="%d artikel berhasil diperiksa"
 COM_CONTENT_N_ITEMS_DELETED="%s artikel dihapus."
 COM_CONTENT_N_ITEMS_DELETED_1="%s artikel dihapus."
+COM_CONTENT_N_ITEMS_FEATURED="%s artikel jadi pilihan."
+COM_CONTENT_N_ITEMS_FEATURED_1="%s artikel jadi pilihan."
 COM_CONTENT_N_ITEMS_PUBLISHED="%s artikel diterbitkan."
 COM_CONTENT_N_ITEMS_PUBLISHED_1="%s artikel diterbitkan."
 COM_CONTENT_N_ITEMS_TRASHED="%s artikel dibuang."
 COM_CONTENT_N_ITEMS_TRASHED_1="%s artikel dibuang."
+COM_CONTENT_N_ITEMS_UNFEATURED="%s artikel tidak jadi pilihan."
+COM_CONTENT_N_ITEMS_UNFEATURED_1="%s artikel tidak jadi pilihan."
 COM_CONTENT_N_ITEMS_UNPUBLISHED="%s artikel tidak diterbitkan."
 COM_CONTENT_N_ITEMS_UNPUBLISHED_1="%s artikel tidak diterbitkan."
 COM_CONTENT_NEW_ARTICLE="Artikel Baru"
@@ -146,15 +150,16 @@ COM_CONTENT_PAGEBREAK_TITLE="Judul Halaman:"
 COM_CONTENT_PAGEBREAK_TOC="Tabel Konten Alias:"
 COM_CONTENT_RIGHT="Kanan"
 COM_CONTENT_SAVE_SUCCESS="Artikel berhasil disimpan"
+COM_CONTENT_SAVE_WARNING="Alias sudah ada maka angka ditambahkan dibagian akhir. Anda bisa mengedit ulang artikel tersebut untuk mengkustomnya."
 COM_CONTENT_SELECT_AN_ARTICLE="Pilih sebuah Artikel"
-COM_CONTENT_SHARED_DESC="Pengaturan ini diaplikasikan ke Opsi Bagikan di dalam tata letak Daftar, Blog dan Fitur kecuali mereka diedit di pengaturan menu."
+COM_CONTENT_SHARED_DESC="Setelan ini diterapkan ke Opsi Bagikan di dalam tata letak Daftar, Blog dan Pilihan kecuali mereka diedit di pengaturan menu."
 COM_CONTENT_SHARED_LABEL="Opsi Bagikan"
-COM_CONTENT_SHOW_ARTICLE_OPTIONS_DESC="Tampilkan atau sembunyikan slider artikel di tampilan edit artikel bagian belakang. Opsi ini dapat mengesampingkan opsi global."
+COM_CONTENT_SHOW_ARTICLE_OPTIONS_DESC="Tampilkan atau sembunyikan slider artikel di tampilan edit artikel halaman admin. Opsi ini dapat mengesampingkan opsi global."
 COM_CONTENT_SHOW_ARTICLE_OPTIONS_LABEL="Opsi Penampilan Artikel"
 COM_CONTENT_SHOW_EMPTY_CATEGORIES_DESC="Jika memilih Tampilkan, kategori yang kosong akan tampil. Sebuah kategori dikatakan kosong apabila - tidak mempunyai artikel atau subkategori."
 COM_CONTENT_SHOW_IMAGES_URLS_BACK_DESC="Tampilkan atau sembunyikan kolom untuk memasukkan gambar standar dan tautan ke administrator"
 COM_CONTENT_SHOW_IMAGES_URLS_BACK_LABEL="Gambar & Tautan Admin"
-COM_CONTENT_SHOW_IMAGES_URLS_FRONT_DESC="Tampilkan atau sembunyikan kolom untuk memasukkan gambar standar dan tautan ketika mengedit bagian depan"
+COM_CONTENT_SHOW_IMAGES_URLS_FRONT_DESC="Tampil atau sembunyikan kolom untuk memasukkan gambar dan tautan-tautan ketika sedang mengedit halaman situs"
 COM_CONTENT_SHOW_IMAGES_URLS_FRONT_LABEL="Gambar & Tautan situs"
 COM_CONTENT_SHOW_PUBLISHING_OPTIONS_DESC="Tampilkan atau sembunyikan slider opsi penerbitan di tampilan edit artikel. Opsi ini bisa mengedit tanggal dan identitas penulis."
 COM_CONTENT_SHOW_PUBLISHING_OPTIONS_LABEL="Opsi Penerbitan"
@@ -179,5 +184,5 @@ COM_CONTENT_XML_DESCRIPTION="Komponen pengelolaan artikel"
 JGLOBAL_NO_ITEM_SELECTED="Tidak ada artikel yang dipilih"
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="Anda tidak dibenarkan untuk membuat artikel baru di dalam kategori ini."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EDIT="Anda tidak dibenarkan untuk mengedit satu atau lebih artikel-artikel ini."
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengedit pengaturan, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
-JLIB_RULES_SETTING_NOTES_ITEM="1. Jika Anda mengedit pengaturan disini, maka hanya akan diaplikasikan ke artikel ini. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global, kelompok induk, dan kategori yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan di konfigurasi global, kelompok induk atau kategori, kelompok yang sedang diedit tidak bisa mengambil tindakan ini untuk artikel ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan untuk artikel ini (jika ini konflik dengan konfigurasi global, kelompok induk atau kategori maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengedit setelan, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
+JLIB_RULES_SETTING_NOTES_ITEM="1. Jika Anda mengedit setelan disini, maka hanya akan diterapkan ke artikel ini. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global, kelompok induk, dan kategori yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan di konfigurasi global, kelompok induk atau kategori, kelompok yang sedang diedit tidak bisa mengambil tindakan ini untuk artikel ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan untuk artikel ini (jika terdapat konflik dengan konfigurasi global, kelompok induk atau kategori maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
