--- a/j3x/admin_id-ID/id-ID.com_languages.ini
+++ b/j3x/admin_id-ID/id-ID.com_languages.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_languages.ini 897 2014-04-21 13:32:55Z dw1rianto $
+; $Id: id-ID.com_languages.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -15,28 +15,29 @@ COM_LANGUAGES_FIELD_IMAGE_LABEL="Awalan Gambar"
 COM_LANGUAGES_FIELD_LANG_TAG_DESC="Masukkan tagar bahasa – contoh: en-GB untuk English (UK). Harus awalan yang tepat yang digunakan oleh bahasa yang terpasang atau yang ingin dipasang."
 COM_LANGUAGES_FIELD_LANG_TAG_LABEL="Tagar Bahasa"
 COM_LANGUAGES_INSTALL="Pasang Bahasa"
+COM_LANGUAGES_OVERRIDE_ERROR_RESERVED_WORDS="YES, NO, NULL, FALSE, ON, OFF, NONE, TRUE adalah kata-kata yang sudah ditandai dan tidak bisa digunakan sebagai konstan bahasa."
 COM_LANGUAGES_OVERRIDE_FIELD_BOTH_LABEL="Untuk kedua lokasi"
-COM_LANGUAGES_OVERRIDE_FIELD_BOTH_DESC="Jika kotak ini dicentang maka akan diberlakukan untuk kedua lokasi, administrator (Bagian Belakang) dan situs (Bagian Depan). Ini penting untuk merubah langsung beberapa plugin karena berkas-berkas bahasa yang mereka miliki, sementara disimpan di bagian belakang, juga digunakan di bagian depan (contoh: plg_content_vote).<br />Perubahan seluruhnya bersifat tidak terikat antara satu sama lain setelah mereka disimpan."
+COM_LANGUAGES_OVERRIDE_FIELD_BOTH_DESC="Jika kotak ini dicentang maka akan diberlakukan untuk kedua lokasi, administrator (Halaman admin) dan situs (Halaman situs). Ini penting untuk merubah langsung beberapa plugin karena berkas-berkas bahasa yang mereka miliki, sementara disimpan di halaman admin, juga digunakan di halaman situs (contoh: plg_content_vote).<br />Perubahan seluruhnya bersifat tidak terikat antara satu sama lain setelah mereka disimpan."
 COM_LANGUAGES_OVERRIDE_FIELD_CLIENT_LABEL="Lokasi"
-COM_LANGUAGES_OVERRIDE_FIELD_CLIENT_DESC="Menandakan apakah perubahan akan dibuat untuk situs (Bagian Depan) atau administrator (Bagian Belakang) klien."
+COM_LANGUAGES_OVERRIDE_FIELD_CLIENT_DESC="Menandakan apakah perubahan akan dibuat untuk situs (Halaman situs) atau administrator (Halaman admin) klien."
 COM_LANGUAGES_OVERRIDE_FIELD_FILE_LABEL="Berkas"
 COM_LANGUAGES_OVERRIDE_FIELD_FILE_DESC="Perubahan bahasa disimpan di dalam berkas INI tertentu (karena ini adalah teks aslinya juga). Disini Anda dapat melihat di berkas yang mana perubahan itu disimpan."
 COM_LANGUAGES_OVERRIDE_FIELD_LANGUAGE_LABEL="Bahasa"
 COM_LANGUAGES_OVERRIDE_FIELD_LANGUAGE_DESC="Bahasa dimana konstan telah diubah."
 COM_LANGUAGES_OVERRIDE_FIELD_KEY_LABEL="Konstan Bahasa"
-COM_LANGUAGES_OVERRIDE_FIELD_KEY_DESC="String konstan bahasa yang ingin Anda ubah.<br />Masing-masing hasil keluaran bahasa di situs Anda ditandai oleh sebuah konstan bahasa yang Anda gunakan untuk membuat perubahan teks tersebut.<br />Jika Anda tidak mengetahui konstan yang berhubungan, Anda dapat mencarinya di sebelah kanan. Dengan mengkliknya, hasil konstan yang benar akan otomatis dimasukkan kedalam kolom isian."
+COM_LANGUAGES_OVERRIDE_FIELD_KEY_DESC="Kata/kalimat konstan bahasa yang ingin Anda ubah.<br />Masing-masing hasil keluaran bahasa di situs Anda ditandai oleh sebuah konstan bahasa yang Anda gunakan untuk membuat perubahan teks tersebut.<br />Jika Anda tidak mengetahui konstan yang berhubungan, Anda dapat mencarinya di sebelah kanan. Dengan mengkliknya, hasil konstan yang benar akan otomatis dimasukkan kedalam kolom isian."
 COM_LANGUAGES_OVERRIDE_FIELD_OVERRIDE_LABEL="Teks"
 COM_LANGUAGES_OVERRIDE_FIELD_OVERRIDE_DESC="Disini Anda memasukkan teks yang akan diubah.<br /><strong>Mohon diperhatikan</strong> mungkin ada simbol-simbol pengganti yang penting (seperti: %s, %d or %1$s) yang terdapat di dalam teks tersebut (mereka akan digantikan dengan teks-teks lain sebelum ditampilkan), jadi Anda harus membiarkannya."
 COM_LANGUAGES_OVERRIDE_FIELD_SEARCHSTRING_LABEL="Cari Teks"
-COM_LANGUAGES_OVERRIDE_FIELD_SEARCHSTRING_DESC="Silahkan memasukkan teks yang ingin dicari. Mereka mungkin ada di sembarang berkas-berkas bahasa."
+COM_LANGUAGES_OVERRIDE_FIELD_SEARCHSTRING_DESC="Silahkan masukkan teks yang ingin dicari. Mungkin ada di sembarang berkas-berkas bahasa."
 COM_LANGUAGES_OVERRIDE_FIELD_SEARCHTYPE_LABEL="Pencarian"
 COM_LANGUAGES_OVERRIDE_FIELD_SEARCHTYPE_DESC="Disini Anda memilih apakah ingin mencari nama konstannya atau nilainya (teks sebenarnya)."
 COM_LANGUAGES_OVERRIDE_FIELD_SEARCHTYPE_CONSTANT="Konstan"
 COM_LANGUAGES_OVERRIDE_FIELD_SEARCHTYPE_TEXT="Nilai"
-COM_LANGUAGES_FIELD_PUBLISHED_DESC="Pilihan untuk menerbitkan bahasa konten ini atau tidak. Jika diterbitkan, maka akan ditampilakn sebagai pilihan di modul Pengganti Bahasa di bagian depan situs."
+COM_LANGUAGES_FIELD_PUBLISHED_DESC="Pilihan untuk menerbitkan bahasa konten ini atau tidak. Jika diterbitkan, maka akan ditampilakn sebagai pilihan di modul Pengganti Bahasa di halaman situs."
 COM_LANGUAGES_FIELD_LANG_CODE_DESC="Kode Bahasa ini akan ditambahkan ke URL. Kalau SEF diaktifkan, akan jadi http://mysite.com/en/. Kalau SEF dinonaktifkan, akhiran &amp;lang=en akan ditambahkan di akhir URL. Catatan <em>Kode Bahasa haruslah unik diantara semua bahasa</em>."
 COM_LANGUAGES_FIELD_LANG_CODE_LABEL="URL Kode Bahasa"
-COM_LANGUAGES_FIELD_SITE_NAME_DESC="Masukkan nama situs kustom untuk bahasa konten. Jika nama situs diatur untuk ditampilkan, nama situs kustom ini yang akan digunakan daripada yang ada di pengaturan Konfigurasi Global."
+COM_LANGUAGES_FIELD_SITE_NAME_DESC="Masukkan nama situs kustom untuk bahasa konten. Jika nama situs diatur untuk ditampilkan, nama situs kustom ini yang akan digunakan daripada yang ada di setelan Konfigurasi Global."
 COM_LANGUAGES_FIELD_SITE_NAME_LABEL="Nama Situs Kustom"
 COM_LANGUAGES_FIELDSET_SITE_NAME_LABEL="Nama Situs"
 COM_LANGUAGES_FIELD_TITLE_DESC="Judul bahasa seperti yang akan muncul di daftar"
@@ -67,7 +68,7 @@ COM_LANGUAGES_MULTILANGSTATUS_LANGUAGEFILTER="Plugin Saring Bahasa"
 COM_LANGUAGES_MULTILANGSTATUS_LANGUAGEFILTER_DISABLED="Situs ini diatur sebagai situs multibahasa. Plugin Saring Bahasa tidak aktifkan walaupun satu atau lebih modul Pengganti Bahasa ATAU/DAN satu atau lebih Bahasa konten Standar Beranda tertentu diterbitkan."
 COM_LANGUAGES_MULTILANGSTATUS_NONE="Situs ini tidak diatur sebagai situs multibahasa."
 COM_LANGUAGES_MULTILANGSTATUS_SITE_LANG_PUBLISHED="Bahasa Situs Diterbitkan"
-COM_LANGUAGES_MULTILANGSTATUS_USELESS_HOMES="Situs ini tida diatur sebagai itus multibahasa.<br /><strong>Catatan</strong>: paling tidak satu halaman Standar Beranda sudah ditentukan ke Bahasa Konten. Ini tidak akan merusak pengaturan sebagai bahasa-satu-satunya tapi ini tidak berguna."
+COM_LANGUAGES_MULTILANGSTATUS_USELESS_HOMES="Situs ini tida diatur sebagai itus multibahasa.<br /><strong>Catatan</strong>: paling tidak satu halaman Standar Beranda sudah ditentukan ke Bahasa Konten. Ini tidak akan merusak setelan sebagai bahasa-satu-satunya tapi ini tidak berguna."
 COM_LANGUAGES_N_ITEMS_DELETED="%d Bahasa Konten berhasil dihapus"
 COM_LANGUAGES_N_ITEMS_DELETED_1="%d Bahasa Konten berhasil dihapus"
 COM_LANGUAGES_N_ITEMS_PUBLISHED="%d Bahasa Konten berhasil diterbitkan"
@@ -82,26 +83,26 @@ COM_LANGUAGES_SEARCH_IN_TITLE="Cari di Judul"
 COM_LANGUAGES_SUBMENU_CONTENT="Bahasa Konten"
 COM_LANGUAGES_SUBMENU_INSTALLED_ADMINISTRATOR="Terpasang - Administrator"
 COM_LANGUAGES_SUBMENU_INSTALLED_SITE="Terpasang - Situs"
-COM_LANGUAGES_SUBMENU_OVERRIDES="Penggantian"
+COM_LANGUAGES_SUBMENU_OVERRIDES="Timpa"
 COM_LANGUAGES_VIEW_INSTALLED_TITLE="Pengelolaan Bahasa: Bahasa Terpasang"
 COM_LANGUAGES_VIEW_LANGUAGE_EDIT_EDIT_TITLE="Pengelolaan Bahasa: Edit Bahasa Konten"
 COM_LANGUAGES_VIEW_LANGUAGE_EDIT_NEW_TITLE="Pengelolaan Bahasa: Bahasa Konten Baru"
 COM_LANGUAGES_VIEW_LANGUAGES_TITLE="Pengelolaan Bahasa: Bahasa Konten"
 COM_LANGUAGES_VIEW_OVERRIDE_CLIENT_SITE="Situs"
 COM_LANGUAGES_VIEW_OVERRIDE_CLIENT_ADMINISTRATOR="Administrator"
-COM_LANGUAGES_VIEW_OVERRIDE_EDIT_TITLE="Pengelolaan Bahasa: Edit Penggantian"
-COM_LANGUAGES_VIEW_OVERRIDE_EDIT_NEW_OVERRIDE_LEGEND="Membuat Penggantian Baru"
-COM_LANGUAGES_VIEW_OVERRIDE_EDIT_EDIT_OVERRIDE_LEGEND="Edit Penggantian ini"
+COM_LANGUAGES_VIEW_OVERRIDE_EDIT_TITLE="Pengelolaan Bahasa: Edit Timpa"
+COM_LANGUAGES_VIEW_OVERRIDE_EDIT_NEW_OVERRIDE_LEGEND="Membuat Timpa Baru"
+COM_LANGUAGES_VIEW_OVERRIDE_EDIT_EDIT_OVERRIDE_LEGEND="Edit Timpa ini"
 COM_LANGUAGES_VIEW_OVERRIDE_LANGUAGE="%1$s [%2$s]"
 COM_LANGUAGES_VIEW_OVERRIDE_MORE_RESULTS="Hasil Lainnya"
 COM_LANGUAGES_VIEW_OVERRIDE_NO_RESULTS="Tidak ada teks yang sesuai"
 COM_LANGUAGES_VIEW_OVERRIDE_REFRESHING="Silahkan tunggu sementara cache kembali dibuat."
 COM_LANGUAGES_VIEW_OVERRIDE_REQUEST_ERROR="Gagal saat melakukan permintaan Ajax"
 COM_LANGUAGES_VIEW_OVERRIDE_RESULTS_LEGEND="Hasil Pencarian"
-COM_LANGUAGES_VIEW_OVERRIDE_SAVE_SUCCESS="Penggantian Bahasa telah berhasil."
+COM_LANGUAGES_VIEW_OVERRIDE_SAVE_SUCCESS="Timpa Bahasa telah berhasil."
 COM_LANGUAGES_VIEW_OVERRIDE_SEARCH_BUTTON="Cari"
 COM_LANGUAGES_VIEW_OVERRIDE_SEARCH_LEGEND="Cari teks yang ingin Anda ubah"
-COM_LANGUAGES_VIEW_OVERRIDE_SEARCH_TIP="Sebuah string bahasa terdiri dua bagian: konstan bahasa tertentu dan nilainya. Contohnya, di dalam string:<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COM_CONTENT_READ_MORE="_QQ_"Selengkapnya: "_QQ_"<br /><br />maka yang menjadi konstan adalah '<u>COM_CONTENT_READ_MORE</u>' sementara nilainya adalah '<u>Selengkapnya: </u>'.<br /><br />Anda harus gunakan konstan bahasa tertentu untuk dapat membuat suatu penggantian kepada nilainya. Karena itu, Anda bisa mencari konstan atau nilai yang ingin Anda ubah melalui kolom isian dibawah ini.<br /><br />Dengan mengklik hasil yang diinginkan, konstan yang dicari akan otomatis dimasukkan ke dalam kolom isian."
+COM_LANGUAGES_VIEW_OVERRIDE_SEARCH_TIP="Sebuah kata/kalimat bahasa terdiri dua bagian: konstan bahasa tertentu dan nilainya. Contohnya, di dalam kata/kalimat:<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COM_CONTENT_READ_MORE="_QQ_"Selengkapnya: "_QQ_"<br /><br />maka yang menjadi konstan adalah '<u>COM_CONTENT_READ_MORE</u>' sementara nilainya adalah '<u>Selengkapnya: </u>'.<br /><br />Anda harus gunakan konstan bahasa tertentu untuk dapat membuat suatu penggantian kepada nilainya. Karena itu, Anda bisa mencari konstan atau nilai yang ingin Anda ubah melalui kolom isian dibawah ini.<br /><br />Dengan mengklik hasil yang diinginkan, konstan yang dicari akan otomatis dimasukkan ke dalam kolom isian."
 COM_LANGUAGES_VIEW_OVERRIDES_FILTER_SEARCH_DESC="Mencari konstan atau teks."
 COM_LANGUAGES_VIEW_OVERRIDES_KEY="Konstan"
 COM_LANGUAGES_VIEW_OVERRIDES_LANGUAGES_BOX_ITEM="%1$s - %2$s"
@@ -109,6 +110,6 @@ COM_LANGUAGES_VIEW_OVERRIDES_N_ITEMS_DELETED="%d penggantian bahasa berhasil dih
 COM_LANGUAGES_VIEW_OVERRIDES_N_ITEMS_DELETED_1="%d penggantian bahasa berhasil dihapus"
 COM_LANGUAGES_VIEW_OVERRIDES_NO_ITEM_SELECTED="Anda belum memilih penggantian apapun"
 COM_LANGUAGES_VIEW_OVERRIDES_TEXT="Teks"
-COM_LANGUAGES_VIEW_OVERRIDES_TITLE="Pengelolaan Bahasa: Penggantian Bahasa"
+COM_LANGUAGES_VIEW_OVERRIDES_TITLE="Pengelolaan Bahasa: Timpa Bahasa"
 COM_LANGUAGES_XML_DESCRIPTION="Komponen untuk pengelolaan bahasa"
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika tedpat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
