--- a/j3x/admin_id-ID/id-ID.com_media.ini
+++ b/j3x/admin_id-ID/id-ID.com_media.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_media.ini 883 2014-02-23 14:48:05Z sikumbang $
+; $Id: id-ID.com_media.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -14,8 +14,8 @@ COM_MEDIA_CAPTION_CLASS_DESC="Hal ini akan mengaplikasikan kelas yang dimasukkan
 COM_MEDIA_CLEAR_LIST="Hapus Daftar"
 COM_MEDIA_CONFIGURATION="Opsi Pengelolaan Media"
 COM_MEDIA_CREATE_COMPLETE="Selesai Membuat: %s"
-COM_MEDIA_CREATE_FOLDER="Buat Folder"
-COM_MEDIA_CREATE_NEW_FOLDER="Buat Folder Baru"
+COM_MEDIA_CREATE_FOLDER="Buat Pelipat"
+COM_MEDIA_CREATE_NEW_FOLDER="Buat Pelipat Baru"
 COM_MEDIA_CURRENT_PROGRESS="Progres saat ini"
 COM_MEDIA_DELETE_COMPLETE="Selesai Menghapus: %s"
 COM_MEDIA_DESCFTPTITLE="Detail Login FTP"
@@ -35,44 +35,44 @@ COM_MEDIA_ERROR_FILE_EXISTS="Berkas sudah ada"
 COM_MEDIA_ERROR_UNABLE_TO_CREATE_FOLDER_WARNDIRNAME="Tidak dapat membuat direktori. Nama direktori harus hanya mengandung karakter alfanumerik dan tanpa spasi."
 COM_MEDIA_ERROR_UNABLE_TO_BROWSE_FOLDER_WARNDIRNAME="Tidak bisa menjelajah:&#160;%s. Nama direktori arus hanya mengandung karakter alfanumerik dan tanpa spasi."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FILE_WARNFILENAME="Tidak dapat menghapus:&#160;%s. Nama berkas harus hanya mengandung karakter alfanumerik dan tanpa spasi."
-COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_NOT_EMPTY="Tidak dapat menghapus:&#160;%s. Folder tidak kosong!"
+COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_NOT_EMPTY="Tidak dapat menghapus:&#160;%s. Pelipat tidak kosong!"
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_WARNDIRNAME="Tidak dapat menghapus:&#160;%s. Nama direktori harus hanya mengandung karakter alfanumerik dan tanpa spasi."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE="Tidak dapat menghapus:&#160;"
 COM_MEDIA_ERROR_UNABLE_TO_UPLOAD_FILE="Tidak dapat mengunggah berkas."
 COM_MEDIA_ERROR_UPLOAD_INPUT="Masukkan berkas untuk diunggah"
 COM_MEDIA_ERROR_WARNFILENAME="Nama berkas harus hanya mengandung karakter alfanumerik dan tanpa spasi."
 COM_MEDIA_ERROR_WARNFILETOOLARGE="Berkas ini terlalu besar untuk diunggah."
-COM_MEDIA_ERROR_WARNFILETYPE="Tipe berkas ini tidak didukung."
+COM_MEDIA_ERROR_WARNFILETYPE="Jenis berkas ini tidak didukung."
 COM_MEDIA_ERROR_WARNIEXSS="Kemungkinan Serangan IE XSS ditemukan."
 COM_MEDIA_ERROR_WARNINVALID_IMG="Bukan gambar yang benar."
-COM_MEDIA_ERROR_WARNINVALID_MIME="Ilegal atau tipe mime yang salah terdeteksi."
+COM_MEDIA_ERROR_WARNINVALID_MIME="Ilegal atau jenis mime yang salah terdeteksi."
 COM_MEDIA_ERROR_WARNNOTADMIN="Berkas yang diunggah bukan berkas gambar dan Anda bukan seorang manajer atau yang lebih tinggi."
 COM_MEDIA_ERROR_WARNNOTEMPTY="Tidak kosong!"
-COM_MEDIA_FIELD_CHECK_MIME_DESC="Gunakan MIME Magic atau Info-berkas untuk melakukan verifikasi berkas. Coba nonaktifkan ini jika Anda menerima tipe mime gagal yang salah"
-COM_MEDIA_FIELD_CHECK_MIME_LABEL="Pemeriksaan Tipe MIME"
-COM_MEDIA_FIELD_IGNORED_EXTENSIONS_DESC="Abaikan ekstensi berkas untuk pemeriksaan tipe MIME dan pembatasan pengunggahan"
+COM_MEDIA_FIELD_CHECK_MIME_DESC="Gunakan MIME Magic atau Info-berkas untuk melakukan verifikasi berkas. Coba nonaktifkan ini jika Anda menerima jenis mime gagal yang salah"
+COM_MEDIA_FIELD_CHECK_MIME_LABEL="Pemeriksaan Jenis MIME"
+COM_MEDIA_FIELD_IGNORED_EXTENSIONS_DESC="Abaikan ekstensi berkas untuk pemeriksaan jenis MIME dan pembatasan pengunggahan"
 COM_MEDIA_FIELD_IGNORED_EXTENSIONS_LABEL="Abaikan Ekstensi"
-COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_DESC="Daftar tipe MIME ilegal, dipisahkan dengan koma, untuk diunggah (daftar hitam)"
-COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_LABEL="Tipe MIME Ilegal"
-COM_MEDIA_FIELD_LEGAL_EXTENSIONS_DESC=" Ekstensi (tipe berkas) yang diperbolehkan untuk diunggah (pisahkan dengan koma)."
+COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_DESC="Daftar jenis MIME ilegal, dipisahkan dengan koma, untuk diunggah (daftar hitam)"
+COM_MEDIA_FIELD_ILLEGAL_MIME_TYPES_LABEL="Jenis MIME Ilegal"
+COM_MEDIA_FIELD_LEGAL_EXTENSIONS_DESC=" Ekstensi (jenis berkas) yang diperbolehkan untuk diunggah (pisahkan dengan koma)."
 COM_MEDIA_FIELD_LEGAL_EXTENSIONS_LABEL="Ekstensi Legal"
-COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_DESC=" Ekstensi Gambar (tipe berkas) yang diperbolehkan untuk diunggah (pisahkan dengan koma). Ini digunakan untuk memeriksa keabsahan header gambars."
+COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_DESC=" Ekstensi Gambar (jenis berkas) yang diperbolehkan untuk diunggah (pisahkan dengan koma). Ini digunakan untuk memeriksa keabsahan header gambars."
 COM_MEDIA_FIELD_LEGAL_IMAGE_EXTENSIONS_LABEL="Ekstensi Gambar Legal"
-COM_MEDIA_FIELD_LEGAL_MIME_TYPES_DESC="Daftar tipe MIME legal, dipisahkan dengan koma, untuk diunggah"
-COM_MEDIA_FIELD_LEGAL_MIME_TYPES_LABEL="Tipe MIME Legal"
+COM_MEDIA_FIELD_LEGAL_MIME_TYPES_DESC="Daftar jenis MIME legal, dipisahkan dengan koma, untuk diunggah"
+COM_MEDIA_FIELD_LEGAL_MIME_TYPES_LABEL="Jenis MIME Legal"
 COM_MEDIA_FIELD_MAXIMUM_SIZE_DESC="Ukuran maksimum untuk diunggah (dalam megabyte). Gunakan nol untuk tak terbatas. Catatan: server Anda punya batas maksimum."
 COM_MEDIA_FIELD_MAXIMUM_SIZE_LABEL="Besar Maks. (dalam MB)"
-COM_MEDIA_FIELD_PATH_FILE_FOLDER_DESC="Masukkan jalur folder berkas yang relatifnya ke pangkal. Peringatan! Mengubah ke jalur selain standar jalur 'images' mungkin akan merusak tautan Anda."
-COM_MEDIA_FIELD_PATH_FILE_FOLDER_LABEL="Jalur folder berkas"
-COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_DESC="Masukkan jalur folder gambar yang relatifnya ke pangkal. Jalur ini <strong>harus jalur yang sama ke jalur berkas (standar) atau ke sebuah subfolder jalur folder berkas.</strong>"
-COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_LABEL="Jalur folder gambar"
+COM_MEDIA_FIELD_PATH_FILE_FOLDER_DESC="Masukkan jalur pelipat berkas yang relatifnya ke pangkal. Peringatan! Mengubah ke jalur selain standar jalur 'images' mungkin akan merusak tautan Anda."
+COM_MEDIA_FIELD_PATH_FILE_FOLDER_LABEL="Jalur pelipat berkas"
+COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_DESC="Masukkan jalur pelipat gambar yang relatifnya ke pangkal. Jalur ini <strong>harus jalur yang sama ke jalur berkas (standar) atau ke sebuah subpelipat jalur pelipat berkas.</strong>"
+COM_MEDIA_FIELD_PATH_IMAGE_FOLDER_LABEL="Jalur pelipat gambar"
 COM_MEDIA_FIELD_RESTRICT_UPLOADS_DESC="Batasi pengunggahan untuk dibawah pengguna manajer untuk gambar saja jika info-berkas atau MIME Magic tidak terpasang."
 COM_MEDIA_FIELD_RESTRICT_UPLOADS_LABEL="Batasi Pengunggahan"
 COM_MEDIA_FILES="Berkas"
 COM_MEDIA_FILESIZE="Ukuran berkas"
-COM_MEDIA_FOLDER="Folder"
-COM_MEDIA_FOLDERS="Folder Media"
-COM_MEDIA_FOLDERS_PATH_LABEL="Mengubah standar 'jalur folder berkas' ke folder lain sekalin standar 'images' bisa merusak tautan Anda.<br /> Folder 'jalur gambar' harus sama atau ke subfolder 'jalur berkas'."
+COM_MEDIA_FOLDER="Pelipat"
+COM_MEDIA_FOLDERS="Pelipat Media"
+COM_MEDIA_FOLDERS_PATH_LABEL="Mengubah standar 'jalur pelipat berkas' ke pelipat lain sekalin standar 'images' bisa merusak tautan Anda.<br /> Pelipat 'jalur gambar' harus sama atau ke sub-pelipat 'jalur berkas'."
 COM_MEDIA_IMAGE_DESCRIPTION="Deskripsi Gambar"
 COM_MEDIA_IMAGE_TITLE="%1$s - %2$s"
 COM_MEDIA_IMAGE_DIMENSIONS="%1$s x %2$s"
@@ -97,4 +97,4 @@ COM_MEDIA_UPLOAD_SUCCESSFUL="Pengunggahan Berhasil"
 COM_MEDIA_UPLOAD="Unggah"
 COM_MEDIA_UP="Ke atas"
 COM_MEDIA_XML_DESCRIPTION="Komponen untuk mengelola media situs"
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
