--- a/j3x/admin_id-ID/id-ID.com_messages.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_messages.sys.ini
@@ -1,10 +1,10 @@
-; $Id: id-ID.com_messages.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_messages.sys.ini  3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_MESSAGES="Pesan"
 COM_MESSAGES_ADD="Pesan Pribadi Baru"
 COM_MESSAGES_READ="Baca Pesan Pribadi"
-COM_MESSAGES_XML_DESCRIPTION="Komponen untuk pesan pribadi yang didukung di tampilan belakang."
+COM_MESSAGES_XML_DESCRIPTION="Komponen untuk pesan pribadi di dukung di halaman admin."
