--- a/j3x/admin_id-ID/id-ID.com_newsfeeds.ini
+++ b/j3x/admin_id-ID/id-ID.com_newsfeeds.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_newsfeeds.ini 904 2014-04-25 00:33:45Z dw1rianto $
+; $Id: id-ID.com_newsfeeds.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -8,25 +8,25 @@ COM_NEWSFEEDS="Pengumpan Berita"
 COM_NEWSFEEDS_BATCH_MENU_LABEL="Pilih Kategori Untuk Dipindahkan/Disalin"
 COM_NEWSFEEDS_BATCH_OPTIONS="Proses sekaligus kelompok pengumpan berita yang dipilih"
 COM_NEWSFEEDS_BATCH_TIP="Jika sebuah kategori dipilih untuk dipindah/disalin, sembarang pilihan tindakan akan diterapkan ke pengumpan yang disalin/dipindahkan itu. Selain itu, semua tindakan akan diterapkan ke pengumpan yang dipilih."
-COM_NEWSFEEDS_CACHE_TIME_HEADING="Waktu Cache"
-COM_NEWSFEEDS_CATEGORIES_DESC="Pengaturan ini diaplikasikan untuk Pilihan Kategori Pengumpan Berita hingga mereka diubah melalui butir menu spesifik"
+COM_NEWSFEEDS_CACHE_TIME_HEADING="Waktu Tembolok"
+COM_NEWSFEEDS_CATEGORIES_DESC="Setelan ini diterapkan untuk Pilihan Kategori Pengumpan Berita hingga mereka diubah melalui butir menu tertentu"
 COM_NEWSFEEDS_CHANGE_FEED_BUTTON="Pilih pengumpan"
 COM_NEWSFEEDS_CONFIGURATION="Opsi Pengelolaan Pengumpan Berita"
 COM_NEWSFEEDS_EDIT_NEWSFEED="Edit Pengumpan Berita"
 COM_NEWSFEEDS_ERROR_UNIQUE_ALIAS="Pengumpan Berita yang lain dari kategori ini memiliki alias yang sama"
-COM_NEWSFEEDS_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah pengumpan berita yang di atur ke Semua bahasa tidak dapat dikaitkan. Asosiasi belum diatur."
+COM_NEWSFEEDS_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah pengumpan berita yang di atur ke Semua bahasa tidak dapat dikaitkan. Hubungan belum diatur."
 COM_NEWSFEEDS_FEED_CATEGORY_OPTIONS_LABEL="Opsi tampilan kategori Pengumpan "
-COM_NEWSFEEDS_FIELD_CACHETIME_DESC="Jumlah menit sebelum perekam (cache) pengumpan berita disegarkan kembali."
-COM_NEWSFEEDS_FIELD_CACHETIME_LABEL="Waktu Cache"
+COM_NEWSFEEDS_FIELD_CACHETIME_DESC="Jumlah menit sebelum tembolok pengumpan berita disegarkan kembali."
+COM_NEWSFEEDS_FIELD_CACHETIME_LABEL="Waktu Tembolok"
 COM_NEWSFEEDS_FIELD_CATEGORIES_OPTIONS_LABEL="Opsi tampilan kategori pengumpan"
 COM_NEWSFEEDS_FIELD_CATEGORY_DESC="Kategori di mana pengumpan ini disertakan"
 COM_NEWSFEEDS_FIELD_CHARACTER_COUNT_DESC="Jumlah karakter untuk ditampilkan tiap pengumpan"
 COM_NEWSFEEDS_FIELD_CHARACTER_COUNT_LABEL="Penghitung Karakter"
 COM_NEWSFEEDS_FIELD_CHARACTERS_COUNT_DESC="Jumlah karakter untuk disertakan di pengumpan"
 COM_NEWSFEEDS_FIELD_CHARACTERS_COUNT_LABEL="Penghitung Karakter"
-COM_NEWSFEEDS_FIELD_CONFIG_CATEGORY_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk Pilihan Kategori Pengumpan Berita hingga mereka diubah melalui butir menu spesifik"
-COM_NEWSFEEDS_FIELD_CONFIG_LIST_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk Pilihan Daftar Tata Letak hingga mereka diubah melalui butir menu spesifik."
-COM_NEWSFEEDS_FIELD_CONFIG_NEWSFEED_SETTINGS_DESC="Pengaturan ini diaplikasikan untuk pengumpan berita tunggal hingga mereka diubah melalui butir menu spesifik."
+COM_NEWSFEEDS_FIELD_CONFIG_CATEGORY_SETTINGS_DESC="Setelan ini diterapkan untuk Pilihan Kategori Pengumpan Berita hingga mereka diubah melalui butir menu tertentu"
+COM_NEWSFEEDS_FIELD_CONFIG_LIST_SETTINGS_DESC="Setelan ini diterapkan untuk Pilihan Daftar Tata Letak hingga mereka diubah melalui butir menu tertentu."
+COM_NEWSFEEDS_FIELD_CONFIG_NEWSFEED_SETTINGS_DESC="Setelan ini diterapkan untuk pengumpan berita tunggal hingga mereka diubah melalui butir menu tertentu."
 COM_NEWSFEEDS_FIELD_CONFIG_NEWSFEED_SETTINGS_LABEL="Pengumpan Berita"
 COM_NEWSFEEDS_FIELD_DESCRIPTION_DESC="Masukan deskripsi untuk pengumpan berita."
 COM_NEWSFEEDS_FIELD_FEED_DISPLAY_ORDER_DESC="Urutan yang digunakan untuk menampilkan pengumpan"
@@ -43,7 +43,7 @@ COM_NEWSFEEDS_FIELD_LANGUAGE_DESC="Sertakan bahasa untuk pengumpan berita ini"
 COM_NEWSFEEDS_FIELD_LINK_DESC="Tautan ke pengumpan berita. Tautan-tautan IDN (Internasional) dikonversikan ke punycode ketika disimpan."
 COM_NEWSFEEDS_FIELD_LINK_LABEL="Tautan"
 COM_NEWSFEEDS_FIELD_MODIFIED_DESC="Tanggal dan waktu pengumpan berita dimodifikasi"
-COM_NEWSFEEDS_FIELD_NUM_ARTICLES_COLUMN_DESC="Perlihatkan atau Sembunyikan Jumlah Artikel di tiap Pengumpan (Anda bisa mengatur nilai ini ditiap Pengumpan Berita)"
+COM_NEWSFEEDS_FIELD_NUM_ARTICLES_COLUMN_DESC="Tampilkan atau Sembunyikan Jumlah Artikel di tiap Pengumpan (Anda bisa mengatur nilai ini ditiap Pengumpan Berita)"
 COM_NEWSFEEDS_FIELD_NUM_ARTICLES_COLUMN_LABEL="# Artikel"
 COM_NEWSFEEDS_FIELD_NUM_ARTICLES_DESC="Jumlah artikel dari pengumpan untuk ditampilkan"
 COM_NEWSFEEDS_FIELD_NUM_ARTICLES_LABEL="Jumlah Artikel"
@@ -59,17 +59,17 @@ COM_NEWSFEEDS_FIELD_SECOND_LABEL="Gambar kedua"
 COM_NEWSFEEDS_FIELD_SELECT_CATEGORY_DESC="Pilih sebuah kategori pengumpan untuk ditampilkan"
 COM_NEWSFEEDS_FIELD_SELECT_FEED_DESC="Pilih Pengumpan untuk ditampilkan"
 COM_NEWSFEEDS_FIELD_SELECT_FEED_LABEL="Pengumpan"
-COM_NEWSFEEDS_FIELD_SHOW_CAT_ITEMS_DESC="Perlihatkan atau Sembunyikan jumlah dari Pengumpan berita dalam kategori"
+COM_NEWSFEEDS_FIELD_SHOW_CAT_ITEMS_DESC="Tampilkan atau Sembunyikan jumlah dari Pengumpan berita dalam kategori"
 COM_NEWSFEEDS_FIELD_SHOW_CAT_TAGS_DESC="Tampilkan tagar untuk kategori"
 COM_NEWSFEEDS_FIELD_SHOW_CAT_TAGS_LABEL="Tampilkan Tagar"
 COM_NEWSFEEDS_FIELD_SHOW_CAT_ITEMS_LABEL="# Pengumpan dalam Kategori"
-COM_NEWSFEEDS_FIELD_SHOW_FEED_DESCRIPTION_DESC="Perlihatkan atau Sembunyikan deskripsi pengumpan"
+COM_NEWSFEEDS_FIELD_SHOW_FEED_DESCRIPTION_DESC="Tampilkan atau Sembunyikan deskripsi pengumpan"
 COM_NEWSFEEDS_FIELD_SHOW_FEED_DESCRIPTION_LABEL="Deskipsi Pengumpan"
-COM_NEWSFEEDS_FIELD_SHOW_FEED_IMAGE_DESC="Perlihatkan atau Sembunyikan gambar pengumpan"
+COM_NEWSFEEDS_FIELD_SHOW_FEED_IMAGE_DESC="Tampilkan atau Sembunyikan gambar pengumpan"
 COM_NEWSFEEDS_FIELD_SHOW_FEED_IMAGE_LABEL="Gambar"
-COM_NEWSFEEDS_FIELD_SHOW_ITEM_DESCRIPTION_DESC="Perlihatkan atau Sembunyikan Konten Pengumpan"
+COM_NEWSFEEDS_FIELD_SHOW_ITEM_DESCRIPTION_DESC="Tampilkan atau Sembunyikan Konten Pengumpan"
 COM_NEWSFEEDS_FIELD_SHOW_ITEM_DESCRIPTION_LABEL="Konten Pengumpan"
-COM_NEWSFEEDS_FIELD_SHOW_LINKS_DESC="Perlihatkan atau Sembunyikan Tautan tautan Pengumpan"
+COM_NEWSFEEDS_FIELD_SHOW_LINKS_DESC="Tampilkan atau Sembunyikan Tautan tautan Pengumpan"
 COM_NEWSFEEDS_FIELD_SHOW_TAGS_DESC="Tampilkan tagar untuk pengumpan"
 COM_NEWSFEEDS_FIELD_SHOW_TAGS_LABEL="Tampilkan Tagar"
 COM_NEWSFEEDS_FIELD_SHOW_LINKS_LABEL="Tautan Pengumpan"
@@ -84,9 +84,9 @@ COM_NEWSFEEDS_FIELDSET_MORE_OPTIONS_LABEL="Opsi Tampilan Pengumpan"
 COM_NEWSFEEDS_FILTER_SEARCH_DESC="Tulis di sini judul pengumpan berita untuk dicari"
 COM_NEWSFEEDS_FLOAT_DESC="Kendali penempatan gambar"
 COM_NEWSFEEDS_FLOAT_LABEL="Letak gambar"
-COM_NEWSFEEDS_HEADING_ASSOCIATION="Asosiasi"
-COM_NEWSFEEDS_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Asosiasi Pengumpan Berita"
-COM_NEWSFEEDS_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya untuk Multibahasa! Pilihan ini hanya akan ditampilkan jika parameter Penyaring Bahasa 'Asosiasi Butir' diatur ke 'Ya'. Pilih butir Pengumpan Berita untuk bahasa target. Asosiasi ini akan membiarkan modul Perubah Bahasa meneruskan ke Butir Pengumpan terkait dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul Perubah Bahasa pada halaman yang bersangkutan. Butir pengumpan yang diatur ke bahasa 'Semua' tidak dapat dikaitkan."
+COM_NEWSFEEDS_HEADING_ASSOCIATION="Hubungan"
+COM_NEWSFEEDS_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Hubungan Pengumpan Berita"
+COM_NEWSFEEDS_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya untuk Multibahasa! Pilihan ini hanya akan ditampilkan jika parameter Penyaring Bahasa 'Hubungan Butir' diatur ke 'Ya'. Pilih butir Pengumpan Berita untuk bahasa target. Hubungan ini akan membiarkan modul Ganti Bahasa meneruskan ke Butir Pengumpan terkait dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul Ganti Bahasa pada halaman yang bersangkutan. Butir pengumpan yang diatur ke bahasa 'Semua' tidak dapat dikaitkan."
 COM_NEWSFEEDS_LEFT="Kiri"
 COM_NEWSFEEDS_MANAGER_NEWSFEED="Pengelolaan Pengumpan Berita: Pengumpan Berita"
 COM_NEWSFEEDS_MANAGER_NEWSFEEDS="Pengelolaan Pengumpan Berita: Pengumpan Berita"
@@ -113,7 +113,7 @@ COM_NEWSFEEDS_SAVE_SUCCESS="Pengumpan berita berhasil disimpan"
 COM_NEWSFEEDS_SEARCH_IN_TITLE="Cari"
 COM_NEWSFEEDS_SELECT_A_FEED="Pilih pengumpan"
 COM_NEWSFEEDS_SELECT_FEED="Pilih pengumpan"
-COM_NEWSFEEDS_SHOW_EMPTY_CATEGORIES_DESC="Jika Perlihatkan, kategori kosong akan ditampilkan. Sebuah kategori dinyatakan kosong - jika tidak ada Pengumpan berita atau sub-kategori."
+COM_NEWSFEEDS_SHOW_EMPTY_CATEGORIES_DESC="Jika Tampilkan, kategori kosong akan ditampilkan. Sebuah kategori dinyatakan kosong - jika tidak ada Pengumpan Berita atau sub-kategori."
 COM_NEWSFEEDS_SUBMENU_CATEGORIES="Kategori"
 COM_NEWSFEEDS_SUBMENU_NEWSFEEDS="Pengumpan Berita"
 COM_NEWSFEEDS_TIP_ASSOCIATION="Pengumpan-pengumpan yang berkaitan"
@@ -122,4 +122,4 @@ COM_NEWSFEEDS_UNPUBLISH_ITEM="Pengumpan Berita Tidak Diterbitkan"
 COM_NEWSFEEDS_WARNING_PROVIDE_VALID_NAME="Masukkan nama yang sah"
 COM_NEWSFEEDS_XML_DESCRIPTION="Komponen ini mengelola RSS dan pengumpan berita Atom."
 JGLOBAL_NEWITEMSLAST_DESC="Standar pengumpan berita baru diatur  ke posisi terakhir. Pengurutan dapat diubah setelah pengumpan berita ini disimpan."
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari penataan global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada penataan global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan penataan global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
