--- a/j3x/admin_id-ID/id-ID.com_newsfeeds.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_newsfeeds.sys.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_newsfeeds.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_newsfeeds.sys.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -14,8 +14,10 @@ COM_NEWSFEEDS_CATEGORY_EDIT_TITLE="Pengelolaan Kategori: Edit Kategori Pengumpan
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_DESC="Tampilkan semua pengumpan berita dalam kategori."
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_OPTION="Standar"
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_TITLE="Daftar Pengumpan Berita di Kategori"
+COM_NEWSFEEDS_CONTENT_TYPE_NEWSFEED="Pengumpan"
+COM_NEWSFEEDS_CONTENT_TYPE_CATEGORY="Kategori Pengumpan"
 COM_NEWSFEEDS_FEEDS="Pengumpan"
 COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_DESC="Tampilkan pengumpan berita tunggal."
 COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_OPTION="Standar"
 COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_TITLE="Pengumpan Berita Tunggal"
-COM_NEWSFEEDS_XML_DESCRIPTION="Komponen ini mengelola pengumpan berita RSS dan Atom"
+COM_NEWSFEEDS_XML_DESCRIPTION="Komponen ini mengelola RSS dan pengumpan berita Atom."
