--- a/j3x/admin_id-ID/id-ID.com_postinstall.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_postinstall.sys.ini
@@ -1,8 +1,8 @@
-; $Id: id-ID.com_postinstall.sys.ini 870 2014-02-23 01:28:19Z sikumbang $
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; $Id: id-ID.com_postinstall.sys.ini 3.4 2015-02-22 $
+; Tim Hanacaraka Joomla! Indonesia
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_POSTINSTALL="Pesan Paska-Pemasangan"
-COM_POSTINSTALL_XML_DESCRIPTION="Menampilkan pesan paska-pemasangan dan paska-pemutakhiran untuk Joomla! dan ekstensinya"
+COM_POSTINSTALL_XML_DESCRIPTION="Menampilkan pesan paska-pemasangan dan paska-pemutakhiran untuk Joomla! dan ekstensinya."
