--- a/j3x/admin_id-ID/id-ID.com_search.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_search.sys.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_search.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_search.sys.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -8,4 +8,4 @@ COM_SEARCH="Pencarian"
 COM_SEARCH_SEARCH_VIEW_DEFAULT_DESC="Menampilkan hasil pencarian."
 COM_SEARCH_SEARCH_VIEW_DEFAULT_OPTION="Standar"
 COM_SEARCH_SEARCH_VIEW_DEFAULT_TITLE="Daftar Hasil Pencarian"
-COM_SEARCH_XML_DESCRIPTION="Komponen untuk fungsi pencarian"
+COM_SEARCH_XML_DESCRIPTION="Komponen untuk fungsi pencarian."
