--- a/j3x/admin_id-ID/id-ID.com_tags.ini
+++ b/j3x/admin_id-ID/id-ID.com_tags.ini
@@ -1,15 +1,15 @@
-; $Id: id-ID.com_tags.ini 897 2014-04-21 13:32:55Z dw1rianto $
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; $Id: id-ID.com_tags.ini 3.4 2015-02-22 $
+; Tim Hanacaraka Joomla! Indonesia
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_TAGS="Tagar"
 COM_TAGS_ALL="Semua"
 COM_TAGS_ALL_TAGS_DESCRIPTION_DESC="Keterangan untuk ditampilkan ditajuk daftar tagar"
-COM_TAGS_ALL_TAGS_DESCRIPTION_LABEL="Deskripsi Header"
+COM_TAGS_ALL_TAGS_DESCRIPTION_LABEL="Deskripsi Tajuk"
 COM_TAGS_ALL_TAGS_MEDIA_DESC="Gambar untuk ditampilkan di header/tajuk daftar tagar"
-COM_TAGS_ALL_TAGS_MEDIA_LABEL="Header Berkas Gambar"
+COM_TAGS_ALL_TAGS_MEDIA_LABEL="Tajuk Berkas Gambar"
 COM_TAGS_ANY="Sembarang"
 COM_TAGS_BASE_ADD_TITLE="Pengelolaan Tagar: Tambah Tagar Baru"
 COM_TAGS_BASE_EDIT_TITLE="Pengelolaan Tagar: Edit Tagar"
@@ -21,33 +21,33 @@ COM_TAGS_BATCH_TIP="Tindakan akan ditentukan untuk Tagar terpilih."
 COM_TAGS_COMPACT_COLUMNS_LABEL="Jumlah kolom"
 COM_TAGS_CONFIG_ALL_TAGS_FIELD_LAYOUT_DESC="Pilih sebuah tata letak standar untuk Daftar semua tagar."
 COM_TAGS_CONFIG_ALL_TAGS_FIELD_LAYOUT_LABEL="Daftar Standar Semua Tata Letak"
-COM_TAGS_CONFIG_ALL_TAGS_SETTINGS_DESC="Pengaturan ini ditentukan untuk sebuah Daftar semua Tagar kecuali diubah pada butir-butir menu tertentu."
+COM_TAGS_CONFIG_ALL_TAGS_SETTINGS_DESC="Setelan ini ditentukan untuk sebuah Daftar semua Tagar kecuali diubah pada butir-butir menu tertentu."
 COM_TAGS_CONFIG_ALL_TAGS_SETTINGS_LABEL="Opsi Daftar Semua Tagar"
-COM_TAGS_CONFIG_DATA_ENTRY_SETTINGS_DESC="Pengaturan ini mengendalikan cara tagar dimasukkan."
+COM_TAGS_CONFIG_DATA_ENTRY_SETTINGS_DESC="Setelan ini mengendalikan cara tagar dimasukkan."
 COM_TAGS_CONFIG_DATA_ENTRY_SETTINGS_LABEL="Opsi Memasukkan Data"
-COM_TAGS_CONFIG_INTEGRATION_SETTINGS_DESC="Pengaturan ini menentukan bagaimana cara Komponen Tagar akan diintegrasikan dengan ekstensi lainnya."
+COM_TAGS_CONFIG_INTEGRATION_SETTINGS_DESC="Setelan ini menentukan bagaimana cara Komponen Tagar akan diintegrasikan dengan ekstensi lainnya."
 COM_TAGS_CONFIG_NUMBER_OF_ITEMS="Jumlah Butir yang di Tagar"
-COM_TAGS_CONFIG_SELECTION_SETTINGS_DESC="Pengaturan ini mengendalikan butir-butir mana saja yang dipilih di dalam daftar tata letak Butir Tagar."
+COM_TAGS_CONFIG_SELECTION_SETTINGS_DESC="Setelan ini mengendalikan butir-butir mana saja yang dipilih di dalam daftar tata letak Butir Tagar."
 COM_TAGS_CONFIG_SELECTION_SETTINGS_LABEL="Opsi Pemilihan Butir"
-COM_TAGS_CONFIG_SHARED_SETTINGS_DESC="Pengaturan ini ditentukan ke semua tata letak tagar kecuali diubah pada butir-butir menu tertentu."
+COM_TAGS_CONFIG_SHARED_SETTINGS_DESC="Setelan ini ditentukan ke semua tata letak tagar kecuali diubah pada butir-butir menu tertentu."
 COM_TAGS_CONFIG_SHARED_SETTINGS_LABEL="Opsi Tata Letak Berbagi"
-COM_TAGS_CONFIG_TAG_SETTINGS_DESC="Pengaturan ini ditentukan ke Daftar Butir Tagar atau Daftar Kompak Butir Tagar kecuali diubah pada butir-butir menu tertentu."
+COM_TAGS_CONFIG_TAG_SETTINGS_DESC="Setelan ini ditentukan ke Daftar Butir Tagar atau Daftar Kompak Butir Tagar kecuali diubah pada butir-butir menu tertentu."
 COM_TAGS_CONFIG_TAG_SETTINGS_LABEL="Opsi Butir Tagar"
 COM_TAGS_CONFIG_TAGGED_ITEMS_FIELD_LAYOUT_DESC="Pilih sebuah tata letak standar untuk butir-butir tagar. Tata letak ini akan digunakan ketika pengguna mengklik sebuah tagar yang tidak diatur butir menunya."
 COM_TAGS_CONFIG_TAGGED_ITEMS_FIELD_LAYOUT_LABEL="Tata Letak Standar Butir Tagar"
 COM_TAGS_CONFIGURATION="Konfigurasi Tagar"
 COM_TAGS_DELETE_NOT_ALLOWED="Hapus tidak diizinkan untuk tagar %s. "
-COM_TAGS_DESCRIPTION_DESC="Masukkan keterangan tagar pilihan ke dalam text-area."
+COM_TAGS_DESCRIPTION_DESC="Masukkan keterangan tagar pilihan ke dalam area teks."
 COM_TAGS_ERROR_UNIQUE_ALIAS="Tagar yang lain mempunyai alias yang sama"
 COM_TAGS_EXCLUDE="Kecuali"
-COM_TAGS_FIELD_CONFIG_HITS_DESC="Tampilkan jumlah hit"
+COM_TAGS_FIELD_CONFIG_HITS_DESC="Tampilkan jumlah dilihat"
 COM_TAGS_FIELD_CONFIG_TAGDESCRIPTION_DESC="Konfigurasikan com_tags"
 COM_TAGS_FIELD_CONFIG_TAGDESCRIPTION_LABEL="Tagar"
 COM_TAGS_FIELD_CONTENT_TYPE_DESC="Hanya butir-butir tagar jenis ini yang akan ditampilkan"
-COM_TAGS_FIELD_CONTENT_TYPE_LABEL="Tipe Konten"
+COM_TAGS_FIELD_CONTENT_TYPE_LABEL="Jenis Konten"
 COM_TAGS_FIELD_FULL_DESC="Ini akan ditampilkan di dalam tampilan tagar tunggal"
 COM_TAGS_FIELD_FULL_LABEL="Gambar Artikel Penuh"
-COM_TAGS_FIELD_HITS_DESC="Jumlah hit untuk tagar ini"
+COM_TAGS_FIELD_HITS_DESC="Jumlah dilihat untuk tagar ini"
 COM_TAGS_FIELD_IMAGE_ALT_DESC="Teks Alt untuk gambar"
 COM_TAGS_FIELD_IMAGE_ALT_LABEL="Alt"
 COM_TAGS_FIELD_IMAGE_CAPTION_DESC="Judul untuk gambar"
@@ -70,17 +70,17 @@ COM_TAGS_FIELD_TAG_BODY_LABEL="Deksripsi Tagar"
 COM_TAGS_FIELD_TAG_LABEL="Tagar"
 COM_TAGS_FIELD_TAG_LINK_CLASS="Kelas CSS untuk tautan tagar"
 COM_TAGS_FIELD_TAG_LINK_CLASS_DESC="Tambahkan disini kelas-kelas CSS tertentu untuk tautan tagar. Jika kosong 'label label-info' akan ditambahkan secara standar tata letak tagar"
-COM_TAGS_FIELD_TYPE_DESC="Hanya tagar tipe tertentu yang akan ditampilkan"
-COM_TAGS_FIELD_TYPE_LABEL="Tipe"
+COM_TAGS_FIELD_TYPE_DESC="Hanya tagar jenis tertentu yang akan ditampilkan"
+COM_TAGS_FIELD_TYPE_LABEL="Jenis"
 COM_TAGS_FIELDSET_DETAILS="Detail Tagar"
 COM_TAGS_FIELDSET_OPTIONS="Opsi"
 COM_TAGS_FIELDSET_PUBLISHING="Opsi Penerbitan"
 COM_TAGS_FIELDSET_TAGGED_ITEMS="Butir Tagar"
 COM_TAGS_FIELDSET_URLS_AND_IMAGES="Tautan dan Gambar"
-COM_TAGS_FLOAT_DESC="Atribut float untuk gambar"
-COM_TAGS_FLOAT_LABEL="Float"
-COM_TAGS_HAS_SUBCATEGORY_ITEMS="%d butir ditentukan untuk subtag tagar ini."
-COM_TAGS_HAS_SUBCATEGORY_ITEMS_1="%d butir ditentukan untuk salah satu subtag tagar ini."
+COM_TAGS_FLOAT_DESC="Atribut letak gambar untuk gambar"
+COM_TAGS_FLOAT_LABEL="Letak gambar"
+COM_TAGS_HAS_SUBCATEGORY_ITEMS="%d butir ditentukan untuk sub-tag tagar ini."
+COM_TAGS_HAS_SUBCATEGORY_ITEMS_1="%d butir ditentukan untuk salah satu sub-tag tagar ini."
 COM_TAGS_INCLUDE="Termasuk"
 COM_TAGS_INCLUDE_CHILDREN_DESC="Termasuk atau kecuali tagar-tagar anak dari daftar hasil untuk sebuah tagar"
 COM_TAGS_INCLUDE_CHILDREN_LABEL="Tagar Anak"
@@ -119,11 +119,11 @@ COM_TAGS_REBUILD_SUCCESS="Data pohon tagar telah berhasil dibuat."
 COM_TAGS_RIGHT="Kanan"
 COM_TAGS_SAVE_SUCCESS="Tagar berhasil disimpan"
 COM_TAGS_SEARCH_TYPE_DESC="Semua akan berupa butir-butir kembali yang punya keseluruhan tagar. Sembarang akan berupa butir-butir kembali yang mempunyai paling tidak salah satu tagar."
-COM_TAGS_SEARCH_TYPE_LABEL="Tipe Kesesuaian"
+COM_TAGS_SEARCH_TYPE_LABEL="Jenis Kesesuaian"
 COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_DESC="Keterangan opsional untuk ditampilkan diurutan pertama dari keseluruhan daftar tagar"
-COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_LABEL="Deskripsi Header"
+COM_TAGS_SHOW_ALL_TAGS_DESCRIPTION_LABEL="Deskripsi Tajuk"
 COM_TAGS_SHOW_ALL_TAGS_IMAGE_DESC="Tampilkan gambar di tajuk/header daftar tagar."
-COM_TAGS_SHOW_ALL_TAGS_IMAGE_LABEL="Tampilkan Gambar Header"
+COM_TAGS_SHOW_ALL_TAGS_IMAGE_LABEL="Tampilkan Gambar Tajuk"
 COM_TAGS_SHOW_EMPTY_TAG_DESC="Tampilkan tagar kosong"
 COM_TAGS_SHOW_ITEM_BODY_DESC="Tampil atau sembunyikan teks body untuk butir-butir yang di tagar"
 COM_TAGS_SHOW_ITEM_BODY_LABEL="Butir body"
@@ -149,7 +149,7 @@ COM_TAGS_TAG_LIST_DESCRIPTION_DESC="Keterangan opsional untuk menampilkan pada u
 COM_TAGS_TAG_LIST_DESCRIPTION_LABEL="Deskripsi Tata Letak"
 COM_TAGS_TAG_LIST_FIELD_ITEM_DESCRIPTION_LABEL="Butir body"
 COM_TAGS_TAG_LIST_ITEM_DESCRIPTION_DESC="Menampilkan teks body untuk masing-masing butir (tergantung dari tabel sumber)"
-COM_TAGS_TAG_LIST_ITEM_HITS_DESC="Tampilkan jumlah hit untuk masing-masing butir"
+COM_TAGS_TAG_LIST_ITEM_HITS_DESC="Tampilkan jumlah dilihat untuk masing-masing butir"
 COM_TAGS_TAG_LIST_MEDIA_DESC="Tampilkan gambar tagar (gambar artikel penuh)"
 COM_TAGS_TAG_LIST_MEDIA_LABEL="Gambar"
 COM_TAGS_TAG_LIST_SHOW_ITEM_IMAGE_DESC="Tampilkan gambar untuk masing-masing butir"
@@ -165,6 +165,6 @@ COM_TAGS_TAGGED_ITEMS_DATE="Tanggal"
 COM_TAGS_TAGGED_ITEMS_ID="ID"
 COM_TAGS_TAGGED_ITEMS_LANGUAGE="Bahasa"
 COM_TAGS_TAGGED_ITEMS_TITLE="Judul"
-COM_TAGS_XML_DESCRIPTION="Komponen ini mengelola tagar"
+COM_TAGS_XML_DESCRIPTION="Komponen ini mengelola tagar."
 JGLOBAL_NO_ITEM_SELECTED="Tidak ada tagar dipilih"
 JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_STATE="Tidak dapat merubah penerbitan ketika tagar induk lebih sedikit."
