--- a/j3x/admin_id-ID/id-ID.com_users.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_users.sys.ini
@@ -1,9 +1,12 @@
-; $Id: id-ID.com_users.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_users.sys.ini 3.4 2015-02-22 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+COM_USERS_CONTENT_TYPE_USER="Pengguna"
+COM_USERS_CONTENT_TYPE_NOTE="Catatan Pengguna"
+COM_USERS_CONTENT_TYPE_CATEGORY="Kategori Catatan Pengguna"
 COM_USER_LOGIN_VIEW_DEFAULT_DESC="Menampilkan sebuah Form Masuk"
 COM_USER_LOGIN_VIEW_DEFAULT_OPTION="Form Masuk"
 COM_USER_LOGIN_VIEW_DEFAULT_TITLE="Form Masuk"
@@ -23,4 +26,4 @@ COM_USER_RESET_VIEW_DEFAULT_DESC="Menampilkan sebuah permintaan untuk Kembalikan
 COM_USER_RESET_VIEW_DEFAULT_OPTION="Standar"
 COM_USER_RESET_VIEW_DEFAULT_TITLE="Kembalikan Sandi"
 COM_USERS="Pengelolaan Pengguna"
-COM_USERS_XML_DESCRIPTION="Komponen untuk mengelola pengguna"
+COM_USERS_XML_DESCRIPTION="Komponen untuk mengelola pengguna."
