--- a/j3x/admin_id-ID/id-ID.com_weblinks.ini
+++ b/j3x/admin_id-ID/id-ID.com_weblinks.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_weblinks.ini 906 2014-04-25 00:47:03Z dw1rianto $
+; $Id: id-ID.com_weblinks.ini 3.4 2015-02-23 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -8,11 +8,11 @@ COM_WEBLINKS="Tautan Web"
 COM_WEBLINKS_ACCESS_HEADING="Akses"
 COM_WEBLINKS_BATCH_OPTIONS="Proses sekaligus kumpulan tautan yang dipilih"
 COM_WEBLINKS_BATCH_TIP="Jika sebuah kategori dipilih untuk dipindah/disalin, sembarang tindakan yang dipilih akan diterapkan ke tautan yang disalin atau dipindahkan itu. Selain itu, semua tindakan akan diterapkan ke tautan yang dipilih."
-COM_WEBLINKS_CATEGORIES_DESC="Pengaturan ini diaplikasikan ke Opsi Kategori Tautan Web kecuali diubah untuk butir menu tertentu."
-COM_WEBLINKS_CATEGORY_DESC="Pengaturan ini diaplikasikan ke Opsi Kategori Tautan Web kecuali diubah untuk butir menu tertentu."
-COM_WEBLINKS_COMPONENT_DESC="Pengaturan ini diaplikasikan ke Tautan Web kecuali mereka diubah untuk butir menu tertentu atau Tauntan Web."
+COM_WEBLINKS_CATEGORIES_DESC="Setelan ini diterapkan ke Opsi Kategori Tautan Web kecuali diubah untuk butir menu tertentu."
+COM_WEBLINKS_CATEGORY_DESC="Setelan ini diterapkan ke Opsi Kategori Tautan Web kecuali diubah untuk butir menu tertentu."
+COM_WEBLINKS_COMPONENT_DESC="Setelan ini diterapkan ke Tautan Web kecuali mereka diubah untuk butir menu tertentu atau Tauntan Web."
 COM_WEBLINKS_COMPONENT_LABEL="Tautan Web"
-COM_WEBLINKS_CONFIG_INTEGRATION_SETTINGS_DESC="Pengaturan ini menentukan bagaimana KomponenTautan Web akan berintegrasi dengan ekstensi yang lain."
+COM_WEBLINKS_CONFIG_INTEGRATION_SETTINGS_DESC="Setelan ini menentukan bagaimana KomponenTautan Web akan berintegrasi dengan ekstensi yang lain."
 COM_WEBLINKS_CONFIGURATION="Opsi Pengelolaan Tautan Web"
 COM_WEBLINKS_EDIT_WEBLINK="Edit Tautan Web"
 COM_WEBLINKS_ERR_TABLES_NAME="Sudah ada Tautan Web dengan nama itu di dalam kategori ini. Cobalah sekali lagi."
@@ -22,21 +22,21 @@ COM_WEBLINKS_ERROR_UNIQUE_ALIAS="Tautan Web yang lainnya dari kategori ini sudah
 COM_WEBLINKS_FIELD_ALIAS_DESC="Judul alias hanya untuk digunakan secara internal saja. Biarkan kosong dan Joomla! akan mengisinya dengan nilai standar dari judul. Harus unik untuk masing-masing tautan web di dalam kategori yang sama."
 COM_WEBLINKS_FIELD_CATEGORY_DESC="Pilih sebuah kategori untuk Tautan Web ini"
 COM_WEBLINKS_FIELD_CATEGORYCHOOSE_DESC="Silahkan pilih sebuah kategori Tautan Web untuk ditampilkan"
-COM_WEBLINKS_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Menampilkan/Menyembunyikan jumlah Tautan Web di masing-masing Kategori"
+COM_WEBLINKS_FIELD_CONFIG_CAT_SHOWNUMBERS_DESC="Tampilkan/Sembunyikan jumlah Tautan Web di masing-masing Kategori"
 COM_WEBLINKS_FIELD_CONFIG_CAT_SHOWNUMBERS_LABEL="# Tautan Web"
 COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_DESC="Jika diatur ya, jumlah berapa kali tautan tersebut diklik akan direkam"
 COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_LABEL="Jumlah Klik"
-COM_WEBLINKS_FIELD_CONFIG_DESCRIPTION_DESC="Menampilkan/Menyembunyikan keterangan dibawah"
-COM_WEBLINKS_FIELD_CONFIG_HITS_DESC="Menampilkan/Menyembunyikan hits"
+COM_WEBLINKS_FIELD_CONFIG_DESCRIPTION_DESC="Tampilkan/Sembunyikan keterangan dibawah"
+COM_WEBLINKS_FIELD_CONFIG_HITS_DESC="Tampilkan/Sembunyikan dilihat"
 COM_WEBLINKS_FIELD_CONFIG_ICON_DESC="Jika Ikon diatas dipilih, pilih sebuah ikon untuk ditampilkan bersama tautan Web. Jika tidak ada yang dipilih, ikon standar yang akan digunakan."
 COM_WEBLINKS_FIELD_CONFIG_ICON_LABEL="Pilih Ikon"
 COM_WEBLINKS_FIELD_CONFIG_INTRO_DESC="Masukkanlah teks disini sebagai pendahuluan untuk tautan web"
 COM_WEBLINKS_FIELD_CONFIG_INTRO_LABEL="Pendahuluan"
-COM_WEBLINKS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Menampilkan/Menyembunyikan keterangan tautan tersebut"
+COM_WEBLINKS_FIELD_CONFIG_LINKDESCRIPTION_DESC="Tampilkan/Sembunyikan keterangan tautan tersebut"
 COM_WEBLINKS_FIELD_CONFIG_LINKDESCRIPTION_LABEL="Deskripsi tautan"
-COM_WEBLINKS_FIELD_CONFIG_OTHERCATS_DESC="Menampilkan/Menyembunyikan kategori-kategori lain"
+COM_WEBLINKS_FIELD_CONFIG_OTHERCATS_DESC="Tampilkan/Sembunyikan kategori-kategori lain"
 COM_WEBLINKS_FIELD_CONFIG_OTHERCATS_LABEL="Kategori lain"
-COM_WEBLINKS_FIELD_CONFIG_SHOWREPORT_DESC="Menampilkan/Menyembunyikan opsi Laporan Tautan Buruk"
+COM_WEBLINKS_FIELD_CONFIG_SHOWREPORT_DESC="Tampilkan/Sembunyikan opsi Laporan Tautan Buruk"
 COM_WEBLINKS_FIELD_CONFIG_SHOWREPORT_LABEL="Laporan"
 COM_WEBLINKS_FIELD_COUNTCLICKS_DESC="Jika diatur ya, jumlah berapa kali tautan tersebut diklik akan direkam"
 COM_WEBLINKS_FIELD_COUNTCLICKS_LABEL="Jumlah Klik"
@@ -47,7 +47,7 @@ COM_WEBLINKS_FIELD_FIRST_DESC="Gambar untuk ditampilkan"
 COM_WEBLINKS_FIELD_FIRST_LABEL="Gambar pertama"
 
 COM_WEBLINKS_FIELD_HEIGHT_DESC="Ketinggian jendela popup target atau modal. Standarnya adalah 600x500 apabila satu kolom isian dibiarkan kosong."
-COM_WEBLINKS_FIELD_HEIGHT_LABEL="Ketinggian"
+COM_WEBLINKS_FIELD_HEIGHT_LABEL="Tinggi"
 COM_WEBLINKS_FIELD_ICON_DESC="Menampilkan sebuah teks, ikon atau tidak sama sekali bersama tautan Web tersebut. Standarnya adalah 'Ikon'."
 COM_WEBLINKS_FIELD_ICON_LABEL="Hanya"
 COM_WEBLINKS_FIELD_ICON_OPTION_ICON="Ikon"
@@ -85,9 +85,9 @@ COM_WEBLINKS_FILTER_CATEGORY="Saring Kategori"
 COM_WEBLINKS_FILTER_STATE="Bagian Saring"
 COM_WEBLINKS_FLOAT_DESC="Kendali penempatan gambar"
 COM_WEBLINKS_FLOAT_LABEL="Letak gambar"
-COM_WEBLINKS_HITS_DESC="Jumlah hits untuk tautan web ini"
+COM_WEBLINKS_HITS_DESC="Jumlah dilihat untuk tautan web ini"
 COM_WEBLINKS_LEFT="Kiri"
-COM_WEBLINKS_LIST_LAYOUT_DESC="Pengaturan ini diaplikasikan untuk Opsi Tata Letak Daftar Tautan Web kecuali mereka diubah untuk butir menu tertentu."
+COM_WEBLINKS_LIST_LAYOUT_DESC="Setelan ini diterapkan untuk Opsi Tata Letak Daftar Tautan Web kecuali mereka diubah untuk butir menu tertentu."
 COM_WEBLINKS_MANAGER_WEBLINK="Pengelolaan Tautan Web: Tautan Web"
 COM_WEBLINKS_MANAGER_WEBLINKS="Pengelolaan Tautan Web: Tautan Web"
 COM_WEBLINKS_N_ITEMS_ARCHIVED="%d tautan web berhasil diarsipkan"
@@ -116,9 +116,9 @@ COM_WEBLINKS_SEARCH_IN_TITLE="Cari di Judul"
 COM_WEBLINKS_SHOW_EMPTY_CATEGORIES_DESC="Jika Tampilkan, kategori yang kosong akan ditampilkan. Kategori hanya kosong - apabila tidak ada Tautan Web atau subkategorie."
 COM_WEBLINKS_SUBMENU_CATEGORIES="Kategori"
 COM_WEBLINKS_SUBMENU_WEBLINKS="Tautan Web"
-COM_WEBLINKS_XML_DESCRIPTION="Komponen untuk mengelola tautan web"
+COM_WEBLINKS_XML_DESCRIPTION="Komponen untuk mengelola tautan web."
 JGLOBAL_NO_ITEM_SELECTED="Tidak ada tautan web yang dipilih"
 JGLOBAL_NEWITEMSLAST_DESC="Standar Tautan Web baru ke posisi terakhir. Pengurutan bisa diubah setelah Tautan Web ini disimpan."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_CREATE="Anda tidak diizinkan untuk membuat sebuah tautan web baru di dalam kategori ini."
 JLIB_APPLICATION_ERROR_BATCH_CANNOT_EDIT="Anda tidak diizinkan mengedit satu atau lebih tautan-tautan web ini."
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
