--- a/j3x/admin_id-ID/id-ID.com_wrapper.ini
+++ b/j3x/admin_id-ID/id-ID.com_wrapper.ini
@@ -1,20 +1,20 @@
-; $Id: id-ID.com_wrapper.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_wrapper.ini 3.4 2015-02-23 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 COM_WRAPPER="Pembungkus"
 COM_WRAPPER_FIELD_ADD_DESC="Standar, http:// akan ditambahkan kecuali terdeteksi http:// atau https:// di URL yang Anda sediakan. Ini mengizinkan Anda untuk memadamkan fungsi-fungsi ini."
 COM_WRAPPER_FIELD_ADD_LABEL="Tambah Otomatis"
-COM_WRAPPER_FIELD_FRAME_DESC="Menampilkan garis frame yang membungkus iframe"
-COM_WRAPPER_FIELD_FRAME_LABEL="Garis frame"
+COM_WRAPPER_FIELD_FRAME_DESC="Menampilkan garis bingkai yang membungkus iframe"
+COM_WRAPPER_FIELD_FRAME_LABEL="Garis bingkai"
 COM_WRAPPER_FIELD_HEIGHT_DESC="Ketinggian jendela IFrame dalam pixel"
-COM_WRAPPER_FIELD_HEIGHT_LABEL="Ketinggian"
-COM_WRAPPER_FIELD_HEIGHTAUTO_DESC="Jika ketinggian diatur ke otomatis, ketinggian akan secara otomatis diatur ke ukuran halaman eksternal. Ini berlaku untuk halaman di domain Anda sendiri. Jika Anda melihat galat Javascript, pastikan parameter ini dinonaktifkan. Ini akan memecah kompatibilitas XHTML untuk halaman ini."
-COM_WRAPPER_FIELD_HEIGHTAUTO_LABEL="Ketinggian Otomatis"
-COM_WRAPPER_FIELD_LABEL_SCROLLBARSPARAMS="Parameter scroll bars"
-COM_WRAPPER_FIELD_SCROLLBARS_DESC="Menampilkan/Menyembunyikan scrollbar horizontal &amp; vertical. Jika Anda pilih 'Otomatis', pastikan parameter lanjutan Otomatis telah diatur."
+COM_WRAPPER_FIELD_HEIGHT_LABEL="Tinggi"
+COM_WRAPPER_FIELD_HEIGHTAUTO_DESC="Jika ketinggian diatur ke otomatis, ketinggian akan secara otomatis diatur ke ukuran halaman eksternal. Ini berlaku untuk halaman di domain Anda sendiri. Jika Anda melihat galat Javascript, pastikan parameter ini dinonaktifkan. Ini akan merusak kesesuaian XHTML halaman ini."
+COM_WRAPPER_FIELD_HEIGHTAUTO_LABEL="Tinggi Otomatis"
+COM_WRAPPER_FIELD_LABEL_SCROLLBARSPARAMS="Parameter scrollbars"
+COM_WRAPPER_FIELD_SCROLLBARS_DESC="Tampilkan/Sembunyikan scrollbar horizontal &amp; vertical. Jika Anda pilih 'Otomatis', pastikan parameter tingkat lanjut Otomatis telah diatur."
 COM_WRAPPER_FIELD_SCROLLBARS_LABEL="Scroll Bars"
 COM_WRAPPER_FIELD_URL_DESC="URL situs/berkas yang Anda inginkan tampil bersama iframe."
 COM_WRAPPER_FIELD_URL_LABEL="URL"
